--- a/data/cards/16433136.yaml
+++ b/data/cards/16433136.yaml
@@ -9,8 +9,8 @@ name:
   pt:
   ja: <ruby>御巫<rt>みかんこ</rt></ruby>の<ruby>祓<rt>はらえ</rt></ruby><ruby>舞<rt>まい</rt></ruby>
   ja_romaji: Mikanko no Haraemai
-  ko:
-  ko_rr:
+  ko: 미캉코의 불무
+  ko_rr: Mikangko-ui Bulmu
   zh-TW:
   zh-CN: 御巫的祓舞
 text:
@@ -23,7 +23,8 @@ text:
   pt:
   ja: |-
     「御巫」モンスターにのみ装備可能。このカード名の②の効果は１ターンに１度しか使用できない。①：装備モンスターは効果では破壊されない。②：相手フィールドにモンスターが特殊召喚された場合、自分及び相手フィールドのモンスターを１体ずつ対象として発動できる。そのモンスターを持ち主の手札に戻す。
-  ko:
+  ko: |-
+    "미캉코" 몬스터에만 장착 가능. 이 카드명의 ②의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 장착 몬스터는 효과로는 파괴되지 않는다. ②: 상대 필드에 몬스터가 특수 소환되었을 경우, 자신 및 상대 필드의 몬스터를 1장씩 대상으로 하고 발동할 수 있다. 그 몬스터를 주인의 패로 되돌린다.
   zh-TW:
   zh-CN: |-
     「御巫」怪兽才能装备。这个卡名的②的效果1回合只能使用1次。
@@ -39,6 +40,12 @@ images:
 sets:
   ja:
   - set_number: DBAD-JP031
+    set_name: 'Deck Build Pack: Amazing Defenders'
+    rarities:
+    - Common
+    - Normal Parallel Rare
+  ko:
+  - set_number: DBAD-KR031
     set_name: 'Deck Build Pack: Amazing Defenders'
     rarities:
     - Common
