--- a/data/cards/18377261.yaml
+++ b/data/cards/18377261.yaml
@@ -9,8 +9,8 @@ name:
   pt:
   ja: <ruby>剣<rt>つるぎ</rt></ruby>の<ruby>御巫<rt>みかんこ</rt></ruby>ハレ
   ja_romaji: Tsurugi no Mikanko Hare
-  ko:
-  ko_rr:
+  ko: 검의 미캉코 하레
+  ko_rr: Geom-ui Mikangko Hare
   zh-TW:
   zh-CN: 剑之御巫 波礼
 text:
@@ -23,7 +23,8 @@ text:
   pt:
   ja: |-
     このカード名の②の効果は１ターンに１度しか使用できない。①：このカードが装備カードを装備していない場合、このカードの戦闘で発生する自分への戦闘ダメージは０になり、装備している場合、このカードは戦闘では破壊されず、このカードの戦闘で発生する自分への戦闘ダメージは代わりに相手が受ける。②：このカードに装備カードが装備された場合に発動できる。デッキから「御巫」装備魔法カード１枚を手札に加える。
-  ko:
+  ko: |-
+    이 카드명의 ②의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 이 카드가 장착 카드를 장착하고 있지 않을 경우, 이 카드의 전투로 발생하는 자신에게로의 전투 데미지는 0 이 되고, 장착하고 있을 경우, 이 카드는 전투로는 파괴되지 않으며, 이 카드의 전투로 발생하는 자신에게로의 전투 데미지는 대신에 상대가 받는다. ②: 이 카드에 장착 카드가 장착되었을 경우에 발동할 수 있다. 덱에서 "미캉코" 장착 마법 카드 1장을 패에 넣는다.
   zh-TW:
   zh-CN: |-
     这个卡名的②的效果1回合只能使用1次。
@@ -43,6 +44,11 @@ images:
 sets:
   ja:
   - set_number: DBAD-JP025
+    set_name: 'Deck Build Pack: Amazing Defenders'
+    rarities:
+    - Super Rare
+  ko:
+  - set_number: DBAD-KR025
     set_name: 'Deck Build Pack: Amazing Defenders'
     rarities:
     - Super Rare
