--- a/data/cards/42705243.yaml
+++ b/data/cards/42705243.yaml
@@ -9,8 +9,8 @@ name:
   pt:
   ja: <ruby>御巫<rt>みかんこ</rt></ruby>の<ruby>契<rt>ちぎ</rt></ruby>り
   ja_romaji: Mikanko no Chigiri
-  ko:
-  ko_rr:
+  ko: 미캉코의 약속
+  ko_rr: Mikangko-ui Yaksok
   zh-TW:
   zh-CN: 御巫之契
 text:
@@ -23,7 +23,8 @@ text:
   pt:
   ja: |-
     このカード名のカードは１ターンに１枚しか発動できない。①：手札・デッキから「御巫」モンスター１体を特殊召喚する。その後、そのモンスターが装備可能な装備魔法カード１枚を自分の手札・墓地から選んでそのモンスターに装備できる。この効果で特殊召喚したモンスターは、フィールドから離れた場合に除外される。
-  ko:
+  ko: |-
+    이 카드명의 카드는 1턴에 1장밖에 발동할 수 없다. ①: 패 / 덱에서 "미캉코" 몬스터 1장을 특수 소환한다. 그 후, 그 몬스터가 장착 가능한 장착 마법 카드 1장을 자신의 패 / 묘지에서 고르고 그 몬스터에 장착할 수 있다. 이 효과로 특수 소환한 몬스터는, 필드에서 벗어났을 경우에 제외된다.
   zh-TW:
   zh-CN: |-
     这个卡名的卡在1回合只能发动1张。
@@ -38,6 +39,12 @@ images:
 sets:
   ja:
   - set_number: DBAD-JP035
+    set_name: 'Deck Build Pack: Amazing Defenders'
+    rarities:
+    - Common
+    - Normal Parallel Rare
+  ko:
+  - set_number: DBAD-KR035
     set_name: 'Deck Build Pack: Amazing Defenders'
     rarities:
     - Common
