--- a/data/cards/79912449.yaml
+++ b/data/cards/79912449.yaml
@@ -9,8 +9,8 @@ name:
   pt:
   ja: <ruby>御巫<rt>みかんこ</rt></ruby>の<ruby>誘<rt>いざな</rt></ruby>い<ruby>輪舞<rt>ロンド</rt></ruby>
   ja_romaji: Mikanko no Izanai Rondo
-  ko:
-  ko_rr:
+  ko: 미캉코의 유혹하는 론도
+  ko_rr: Mikangko-ui Yuhokha-neun Rondo
   zh-TW:
   zh-CN: 御巫的诱轮舞
 text:
@@ -23,7 +23,8 @@ text:
   pt:
   ja: |-
     相手フィールドのモンスターに装備できる。このカード名のカードは１ターンに１枚しか発動できない。①：「御巫の誘い輪舞」は自分フィールドに１枚しか表側表示で存在できない。②：自分フィールドに「御巫」モンスターが存在する限り、装備モンスターのコントロールを得る。③：装備モンスターは自分フィールドに存在する限り、効果を発動できない。④：このカードがフィールドから離れた時に装備モンスターは墓地へ送られる。
-  ko:
+  ko: |-
+    상대 필드의 몬스터에 장착할 수 있다. 이 카드명의 카드는 1턴에 1장밖에 발동할 수 없다. ①: "미캉코의 유혹하는 론도"는 자신 필드에 1장밖에 앞면 표시로 존재할 수 없다. ②: 자신 필드에 "미캉코" 몬스터가 존재하는 한, 장착 몬스터의 컨트롤을 얻는다. ③: 장착 몬스터는 자신 필드에 존재하는 한, 효과를 발동할 수 없다. ④: 이 카드가 필드에서 벗어났을 때에 장착 몬스터는 묘지로 보내진다.
   zh-TW:
   zh-CN: |-
     可以给对方场上的怪兽装备。这个卡名的卡在1回合只能发动1张。
@@ -41,6 +42,12 @@ images:
 sets:
   ja:
   - set_number: DBAD-JP033
+    set_name: 'Deck Build Pack: Amazing Defenders'
+    rarities:
+    - Common
+    - Normal Parallel Rare
+  ko:
+  - set_number: DBAD-KR033
     set_name: 'Deck Build Pack: Amazing Defenders'
     rarities:
     - Common
