--- a/data/series/list.yaml
+++ b/data/series/list.yaml
@@ -1122,8 +1122,8 @@
   pt:
   ja: ピュアリィ
   ja_romaji: Pyuaryi
-  ko:
-  ko_rr:
+  ko: 퓨어리
+  ko_rr: Pyueori
   zh-TW:
   zh-CN:
 - en: Darklord
@@ -3426,8 +3426,8 @@
   pt:
   ja: <ruby>Ｒ－ＡＣＥ<rt>レスキュー・エース</rt></ruby>
   ja_romaji: Resukyū Ēsu
-  ko:
-  ko_rr:
+  ko: <ruby>R－ACE<rt>레스큐 에이스</rt></ruby>
+  ko_rr: Reseukyu Eiseu
   zh-TW:
   zh-CN:
 - en: Fabled
@@ -5514,8 +5514,8 @@
   pt:
   ja: <ruby>御巫<rt>みかんこ</rt></ruby>
   ja_romaji: Mikanko
-  ko:
-  ko_rr:
+  ko: 미캉코
+  ko_rr: Mikangko
   zh-TW:
   zh-CN:
 - en: Synchro Dragon
