--- a/data/series/map.yaml
+++ b/data/series/map.yaml
@@ -1122,8 +1122,8 @@ Purrely:
   pt:
   ja: ピュアリィ
   ja_romaji: Pyuaryi
-  ko:
-  ko_rr:
+  ko: 퓨어리
+  ko_rr: Pyueori
   zh-TW:
   zh-CN:
 Darklord:
@@ -3426,8 +3426,8 @@ Rescue-ACE:
   pt:
   ja: <ruby>Ｒ－ＡＣＥ<rt>レスキュー・エース</rt></ruby>
   ja_romaji: Resukyū Ēsu
-  ko:
-  ko_rr:
+  ko: <ruby>R－ACE<rt>레스큐 에이스</rt></ruby>
+  ko_rr: Reseukyu Eiseu
   zh-TW:
   zh-CN:
 Fabled:
@@ -5490,8 +5490,8 @@ Mikanko:
   pt:
   ja: <ruby>御巫<rt>みかんこ</rt></ruby>
   ja_romaji: Mikanko
-  ko:
-  ko_rr:
+  ko: 미캉코
+  ko_rr: Mikangko
   zh-TW:
   zh-CN:
 Synchro Dragon:
