--- a/data/cards/16310544.yaml
+++ b/data/cards/16310544.yaml
@@ -9,8 +9,8 @@ name:
   pt:
   ja: <ruby>御巫<rt>みかんこ</rt></ruby><ruby>神楽<rt>かぐら</rt></ruby>
   ja_romaji: Mikanko Kagura
-  ko:
-  ko_rr:
+  ko: 미캉코 카구라
+  ko_rr: Mikangko Kagura
   zh-TW:
   zh-CN: 御巫神乐
 text:
@@ -25,7 +25,8 @@ text:
   pt:
   ja: |-
     「御巫」儀式モンスターの降臨に必要。このカード名のカードは１ターンに１枚しか発動できない。①：レベルの合計が儀式召喚するモンスターのレベル以上になるように、自分の手札・フィールドのモンスターをリリースし、手札から「御巫」儀式モンスター１体を儀式召喚する。その後、以下の効果を適用できる。●自分の墓地の装備魔法カードの種類の数まで相手フィールドのカードを選んで破壊し、破壊した数×１０００ダメージを相手に与える。
-  ko:
+  ko: |-
+    "미캉코" 의식 몬스터의 의식 소환에 필요. 이 카드명의 카드는 1턴에 1장밖에 발동할 수 없다. ①: 레벨의 합계가 의식 소환할 몬스터의 레벨 이상이 되도록, 자신의 패 / 필드의 몬스터를 릴리스하고, 패에서 "미캉코" 의식 몬스터 1장을 의식 소환한다. 그 후, 이하의 효과를 적용할 수 있다. ●자신 묘지의 장착 마법 카드의 종류의 수까지 상대 필드의 카드를 골라 파괴하고, 파괴한 수 × 1000 데미지를 상대에게 준다.
   zh-TW:
   zh-CN: |-
     「御巫」仪式怪兽的降临必需。这个卡名的卡在1回合只能发动1张。
@@ -41,6 +42,12 @@ images:
 sets:
   ja:
   - set_number: DBAD-JP034
+    set_name: 'Deck Build Pack: Amazing Defenders'
+    rarities:
+    - Common
+    - Normal Parallel Rare
+  ko:
+  - set_number: DBAD-KR034
     set_name: 'Deck Build Pack: Amazing Defenders'
     rarities:
     - Common
