--- a/data/cards/17255673.yaml
+++ b/data/cards/17255673.yaml
@@ -9,8 +9,8 @@ name:
   pt:
   ja: <ruby>天<rt>あまつ</rt></ruby><ruby>御巫<rt>みかんこ</rt></ruby>の<ruby>闔<rt>とびら</rt></ruby>
   ja_romaji: Amatsumikanko no Tobira
-  ko:
-  ko_rr:
+  ko: 천미캉코의 합
+  ko_rr: Cheonmikangko-ui Hap
   zh-TW:
   zh-CN: 天御巫之阖
 text:
@@ -23,7 +23,8 @@ text:
   pt:
   ja: |-
     ①：装備カードを装備したモンスターが自分フィールドに存在する限り、攻撃可能な相手モンスターは装備カードを装備したモンスターを攻撃しなければならない。②：自分の「御巫」モンスターが戦闘を行う場合、相手はダメージステップ終了時まで魔法・罠・モンスターの効果を発動できない。③：自分の「御巫」モンスターが攻撃を行ったダメージステップ終了時、自分フィールドの装備カード１枚を墓地へ送って発動できる。そのモンスターはもう１度続けてモンスターに攻撃できる。
-  ko:
+  ko: |-
+    ①: 장착 카드를 장착한 몬스터가 자신 필드에 존재하는 한, 공격 가능한 상대 몬스터는 장착 카드를 장착한 몬스터를 공격해야 한다. ②: 자신의 "미캉코" 몬스터가 전투를 실행할 경우, 상대는 데미지 스텝 종료시까지 마법 / 함정 / 몬스터의 효과를 발동할 수 없다. ③: 자신의 "미캉코" 몬스터가 공격을 실행한 데미지 스텝 종료시, 자신 필드의 장착 카드 1장을 묘지로 보내고 발동할 수 있다. 그 몬스터는 1번 더 이어서 몬스터에 공격할 수 있다.
   zh-TW:
   zh-CN: |-
     ①：只要有装备卡装备的怪兽在自己场上存在，可以攻击的对方怪兽必须向有装备卡装备的怪兽作出攻击。
@@ -39,6 +40,12 @@ images:
 sets:
   ja:
   - set_number: DBAD-JP028
+    set_name: 'Deck Build Pack: Amazing Defenders'
+    rarities:
+    - Common
+    - Normal Parallel Rare
+  ko:
+  - set_number: DBAD-KR028
     set_name: 'Deck Build Pack: Amazing Defenders'
     rarities:
     - Common
