--- a/data/cards/20212491.yaml
+++ b/data/cards/20212491.yaml
@@ -9,8 +9,8 @@ name:
   pt:
   ja: ストレイ・ピュアリィ・ストリート
   ja_romaji: Sutorei Pyuaryi Sutorīto
-  ko:
-  ko_rr:
+  ko: 스트레이 퓨어리 스트리트
+  ko_rr: Seuteurei Pyueori Seuteuriteu
   zh-TW:
   zh-CN: 流浪纯爱妖精街道
 text:
@@ -23,7 +23,8 @@ text:
   pt:
   ja: |-
     ①：自分フィールドの「ピュアリィ」モンスターは特殊召喚されたターンには相手の効果の対象にならない。②：１ターンに１度、自分フィールドの表側表示の「ピュアリィ」Ｘモンスターが相手によってフィールドから離れた場合に発動する。自分のデッキ・墓地からレベル１の「ピュアリィ」モンスター１体を選んで特殊召喚する。③：お互いのエンドフェイズに、フィールドの「ピュアリィ」Ｘモンスター１体を対象として発動できる。自分のデッキ・墓地から「ピュアリィ」速攻魔法カード１枚を選び、そのモンスターの下に重ねてＸ素材とする。
-  ko:
+  ko: |-
+    ①: 자신 필드의 "퓨어리" 몬스터는 특수 소환된 턴에는 상대 효과의 대상이 되지 않는다. ②: 1턴에 1번, 자신 필드의 앞면 표시의 "퓨어리" 엑시즈 몬스터가 상대에 의해 필드에서 벗어났을 경우에 발동한다. 자신의 덱 / 묘지에서 레벨 1 의 "퓨어리" 몬스터 1장을 고르고 특수 소환한다. ③: 서로의 엔드 페이즈에, 필드의 "퓨어리" 엑시즈 몬스터 1장을 대상으로 하고 발동할 수 있다. 자신의 덱 / 묘지에서 "퓨어리" 속공 마법 카드 1장을 고르고, 그 몬스터 아래에 겹쳐 엑시즈 소재로 한다.
   zh-TW:
   zh-CN: |-
     ①：自己场上的「纯爱妖精」怪兽在特殊召唤的回合不会成为对方的效果的对象。
@@ -39,6 +40,12 @@ images:
 sets:
   ja:
   - set_number: DBAD-JP019
+    set_name: 'Deck Build Pack: Amazing Defenders'
+    rarities:
+    - Common
+    - Normal Parallel Rare
+  ko:
+  - set_number: DBAD-KR019
     set_name: 'Deck Build Pack: Amazing Defenders'
     rarities:
     - Common
