--- a/data/cards/37495766.yaml
+++ b/data/cards/37495766.yaml
@@ -9,8 +9,8 @@ name:
   pt:
   ja: <ruby>Ｒ－ＡＣＥ<rt>レスキュー・エース</rt></ruby>タービュランス
   ja_romaji: Resukyū Ēsu Tābyuransu
-  ko:
-  ko_rr:
+  ko: <ruby>R－ACE<rt>레스큐 에이스</rt></ruby> 터뷸런스
+  ko_rr: Reseukyu Eiseu Teobyulleonseu
   zh-TW:
   zh-CN: 救援ACE队 涡轮湍流消防战车
 text:
@@ -23,7 +23,8 @@ text:
   pt:
   ja: |-
     このカード名の①②③の効果はそれぞれ１ターンに１度しか使用できない。①：自分の墓地から「Ｒ－ＡＣＥ」カード２枚を除外して発動できる。このカードを手札から特殊召喚する。②：自分メインフェイズに発動できる。デッキから「Ｒ－ＡＣＥ」速攻魔法・通常罠カードを４枚まで選んで自分フィールドにセットする（同名カードは１枚まで）。③：自分フィールドの他のカードが相手の効果でフィールドから離れた場合、フィールドのカード１枚を対象として発動できる。そのカードを破壊する。
-  ko:
+  ko: |-
+    이 카드명의 ①②③의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 자신 묘지에서 "R－ACE(레스큐 에이스)" 카드 2장을 제외하고 발동할 수 있다. 이 카드를 패에서 특수 소환한다. ②: 자신 메인 페이즈에 발동할 수 있다. 덱에서 "R－ACE(레스큐 에이스)" 속공 마법 / 일반 함정 카드를 4장까지 고르고 자신 필드에 세트한다(같은 이름의 카드는 1장까지). ③: 자신 필드의 다른 카드가 상대 효과로 필드에서 벗어났을 경우, 필드의 카드 1장을 대상으로 하고 발동할 수 있다. 그 카드를 파괴한다.
   zh-TW:
   zh-CN: |-
     这个卡名的①②③的效果1回合各能使用1次。
@@ -69,6 +70,12 @@ sets:
     - Ultra Rare
   ja:
   - set_number: DBAD-JP007
+    set_name: 'Deck Build Pack: Amazing Defenders'
+    rarities:
+    - Ultra Rare
+    - Secret Rare
+  ko:
+  - set_number: DBAD-KR007
     set_name: 'Deck Build Pack: Amazing Defenders'
     rarities:
     - Ultra Rare
