--- a/data/cards/37617348.yaml
+++ b/data/cards/37617348.yaml
@@ -9,8 +9,8 @@ name:
   pt:
   ja: <ruby>Ｒ－ＡＣＥ<rt>レスキュー・エース</rt></ruby>ハイドラント
   ja_romaji: Resukyū Ēsu Haidoranto
-  ko:
-  ko_rr:
+  ko: <ruby>R－ACE<rt>레스큐 에이스</rt></ruby> 하이드런트
+  ko_rr: Reseukyu Eiseu Haideureonteu
   zh-TW:
   zh-CN: 救援ACE队 消防栓
 text:
@@ -23,7 +23,8 @@ text:
   pt:
   ja: |-
     このカード名の②③の効果はそれぞれ１ターンに１度しか使用できない。①：自分フィールドに「Ｒ－ＡＣＥハイドラント」以外の「Ｒ－ＡＣＥ」モンスターが存在する限り、相手はこのカードを攻撃対象に選択できず、効果の対象にもできない。②：このカードがモンスターゾーンに存在する限り、自分の「Ｒ－ＡＣＥ」カードの効果でセットした速攻魔法・罠カード１枚はセットしたターンでも発動できる。③：自分メインフェイズに発動できる。デッキから「Ｒ－ＡＣＥハイドラント」以外の「Ｒ－ＡＣＥ」モンスター１体を手札に加える。
-  ko:
+  ko: |-
+    이 카드명의 ②③의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 자신 필드에 "R－ACE(레스큐 에이스) 하이드런트" 이외의 "R－ACE(레스큐 에이스)" 몬스터가 존재하는 한, 상대는 이 카드를 공격 대상으로 선택할 수 없으며, 효과의 대상으로도 할 수 없다. ②: 이 카드가 몬스터 존에 존재하는 한, 자신의 "R－ACE(레스큐 에이스)" 카드의 효과로 세트한 속공 마법 / 함정 카드 1장은 세트한 턴에도 발동할 수 있다. ③: 자신 메인 페이즈에 발동할 수 있다. 덱에서 "R－ACE(레스큐 에이스) 하이드런트" 이외의 "R－ACE(레스큐 에이스)" 몬스터 1장을 패에 넣는다.
   zh-TW:
   zh-CN: |-
     这个卡名的②③的效果1回合各能使用1次。
@@ -44,6 +45,11 @@ images:
 sets:
   ja:
   - set_number: DBAD-JP004
+    set_name: 'Deck Build Pack: Amazing Defenders'
+    rarities:
+    - Super Rare
+  ko:
+  - set_number: DBAD-KR004
     set_name: 'Deck Build Pack: Amazing Defenders'
     rarities:
     - Super Rare
