--- a/data/cards/38339996.yaml
+++ b/data/cards/38339996.yaml
@@ -9,8 +9,8 @@ name:
   pt:
   ja: <ruby>Ｒ－ＡＣＥ<rt>レスキュー・エース</rt></ruby>インパルス
   ja_romaji: Resukyū Ēsu Inparusu
-  ko:
-  ko_rr:
+  ko: <ruby>R－ACE<rt>레스큐 에이스</rt></ruby> 임펄스
+  ko_rr: Reseukyu Eiseu Impeolseu
   zh-TW:
   zh-CN: 救援ACE队 脉冲灭火员
 text:
@@ -23,7 +23,8 @@ text:
   pt:
   ja: |-
     このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：自分メインフェイズに発動できる。相手フィールドの攻撃力が一番高い効果モンスター１体を選ぶ。このターン、そのモンスターはフィールドで発動する効果を発動できない。②：相手がフィールドのモンスターの効果を発動した時、手札・フィールドのこのカードをリリースして発動できる。デッキから機械族の「Ｒ－ＡＣＥ」モンスター１体を特殊召喚する。
-  ko:
+  ko: |-
+    이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 자신 메인 페이즈에 발동할 수 있다. 상대 필드의 공격력이 가장 높은 효과 몬스터 1장을 고른다. 이 턴에, 그 몬스터는 필드에서 발동하는 효과를 발동할 수 없다. ②: 상대가 필드의 몬스터의 효과를 발동했을 때, 패 / 필드의 이 카드를 릴리스하고 발동할 수 있다. 덱에서 기계족의 "R－ACE(레스큐 에이스)" 몬스터 1장을 특수 소환한다.
   zh-TW:
   zh-CN: |-
     这个卡名的①②的效果1回合各能使用1次。
@@ -43,6 +44,11 @@ images:
 sets:
   ja:
   - set_number: DBAD-JP001
+    set_name: 'Deck Build Pack: Amazing Defenders'
+    rarities:
+    - Super Rare
+  ko:
+  - set_number: DBAD-KR001
     set_name: 'Deck Build Pack: Amazing Defenders'
     rarities:
     - Super Rare
