--- a/data/cards/43527730.yaml
+++ b/data/cards/43527730.yaml
@@ -9,8 +9,8 @@ name:
   pt:
   ja: <ruby>御巫<rt>みかんこ</rt></ruby>の<ruby>水舞踏<rt>アラベスク</rt></ruby>
   ja_romaji: Mikanko no Arabesuku
-  ko:
-  ko_rr:
+  ko: 미캉코의 아라베스크
+  ko_rr: Mikangko-ui Arabeseukeu
   zh-TW:
   zh-CN: 御巫的水舞蹈
 text:
@@ -23,7 +23,8 @@ text:
   pt:
   ja: |-
     このカード名の②の効果は１ターンに１度しか使用できない。①：装備モンスターは効果では破壊されない。②：自分メインフェイズに発動できる。装備モンスターとは元々のカード名が異なる「御巫」モンスター１体を手札・デッキから特殊召喚し、このカードをそのモンスターに装備する。その後、このカードを装備していたモンスターを持ち主の手札に戻す。
-  ko:
+  ko: |-
+    이 카드명의 ②의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 장착 몬스터는 효과로는 파괴되지 않는다. ②: 자신 메인 페이즈에 발동할 수 있다. 장착 몬스터와는 원래의 카드명이 다른 "미캉코" 몬스터 1장을 패 / 덱에서 특수 소환하고, 이 카드를 그 몬스터에 장착한다. 그 후, 이 카드를 장착하고 있던 몬스터를 주인의 패로 되돌린다.
   zh-TW:
   zh-CN: |-
     这个卡名的②的效果1回合只能使用1次。
@@ -39,6 +40,11 @@ images:
 sets:
   ja:
   - set_number: DBAD-JP032
+    set_name: 'Deck Build Pack: Amazing Defenders'
+    rarities:
+    - Super Rare
+  ko:
+  - set_number: DBAD-KR032
     set_name: 'Deck Build Pack: Amazing Defenders'
     rarities:
     - Super Rare
