--- a/data/cards/44649322.yaml
+++ b/data/cards/44649322.yaml
@@ -9,8 +9,8 @@ name:
   pt:
   ja: <ruby>伝<rt>でん</rt></ruby><ruby>承<rt>しょう</rt></ruby>の<ruby>大<rt>おお</rt></ruby><ruby>御巫<rt>みかんこ</rt></ruby>
   ja_romaji: Denshō no Ōmikanko
-  ko:
-  ko_rr:
+  ko: 전승의 대미캉코
+  ko_rr: Cheonseung-ui Daemikangko
   zh-TW:
   zh-CN: 传承的大御巫
 text:
@@ -23,7 +23,8 @@ text:
   pt:
   ja: |-
     このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：手札から「御巫」モンスター１体を召喚条件を無視して特殊召喚する。この効果で特殊召喚したモンスターは相手エンドフェイズに持ち主の手札に戻る。②：自分メインフェイズに墓地のこのカードを除外して発動できる。デッキから「伝承の大御巫」以外の「御巫」カード１枚を墓地へ送る。
-  ko:
+  ko: |-
+    이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 패에서 "미캉코" 몬스터 1장을 소환 조건을 무시하고 특수 소환한다. 이 효과로 특수 소환한 몬스터는 상대 엔드 페이즈에 주인의 패로 되돌아간다. ②: 자신 메인 페이즈에 묘지의 이 카드를 제외하고 발동할 수 있다. 덱에서 "전승의 대미캉코" 이외의 "미캉코" 카드 1장을 묘지로 보낸다.
   zh-TW:
   zh-CN: |-
     这个卡名的①②的效果1回合各能使用1次。
@@ -39,6 +40,12 @@ images:
 sets:
   ja:
   - set_number: DBAD-JP029
+    set_name: 'Deck Build Pack: Amazing Defenders'
+    rarities:
+    - Common
+    - Normal Parallel Rare
+  ko:
+  - set_number: DBAD-KR029
     set_name: 'Deck Build Pack: Amazing Defenders'
     rarities:
     - Common
