--- a/data/cards/51822687.yaml
+++ b/data/cards/51822687.yaml
@@ -9,8 +9,8 @@ name:
   pt:
   ja: エクスピュアリィ・ハピネス
   ja_romaji: Ekusupyuaryi Hapinesu
-  ko:
-  ko_rr:
+  ko: 엑스퓨어리 하피니스
+  ko_rr: Ekseupyueori Hapiniseu
   zh-TW:
   zh-CN: 历练纯爱妖精·幸福妖精
 text:
@@ -25,7 +25,9 @@ text:
   ja: |-
     レベル７モンスター×２
     このカードはＸ素材を５つ以上持っている自分のランク２モンスターの上に重ねてＸ召喚する事もできる。①：自分メインフェイズに発動できる。このカードのＸ素材を１つ取り除き、相手フィールドの全ての表側表示モンスターの効果をターン終了時まで無効にする。このカードがレベル１の「ピュアリィ」モンスターをＸ素材としている場合、この効果の発動に対して相手は効果を発動できない。②：Ｘ素材を５つ以上持っているこのカードが戦闘を行う攻撃宣言時に発動する。相手に１５００ダメージを与える。
-  ko:
+  ko: |-
+    레벨 7 몬스터 × 2
+    이 카드는 엑시즈 소재를 5개 이상 가지고 있는 자신의 랭크 2 몬스터 위에 겹쳐 엑시즈 소환할 수도 있다. ①: 자신 메인 페이즈에 발동할 수 있다. 이 카드의 엑시즈 소재를 1개 제거하고, 상대 필드의 모든 앞면 표시 몬스터의 효과를 턴 종료시까지 무효로 한다. 이 카드가 레벨 1 의 "퓨어리" 몬스터를 엑시즈 소재로 하고 있을 경우, 이 효과의 발동에 대하여 상대는 효과를 발동할 수 없다. ②: 엑시즈 소재를 5개 이상 가지고 있는 이 카드가 전투를 실행하는 공격 선언시에 발동한다. 상대에게 1500 데미지를 준다.
   zh-TW:
   zh-CN: |-
     7星怪兽×2
@@ -66,6 +68,12 @@ sets:
     rarities:
   ja:
   - set_number: DBAD-JP017
+    set_name: 'Deck Build Pack: Amazing Defenders'
+    rarities:
+    - Ultra Rare
+    - Secret Rare
+  ko:
+  - set_number: DBAD-KR017
     set_name: 'Deck Build Pack: Amazing Defenders'
     rarities:
     - Ultra Rare
