--- a/data/cards/52645235.yaml
+++ b/data/cards/52645235.yaml
@@ -9,8 +9,8 @@ name:
   pt:
   ja: エピュアリィ・ハピネス
   ja_romaji: Epyuaryi Hapinesu
-  ko:
-  ko_rr:
+  ko: 에퓨어리 하피니스
+  ko_rr: Epyueori Hapiniseu
   zh-TW:
   zh-CN: 亲历纯爱妖精·幸福妖精
 text:
@@ -25,7 +25,9 @@ text:
   ja: |-
     レベル２モンスター×２
     ①：このカードが戦闘を行ったダメージステップ終了時に発動できる。デッキから「ピュアリィ」カード１枚を手札に加える。このカードが「ピュアリィ・ハッピーメモリー」をＸ素材としている場合、フィールドの表側表示モンスター１体を選んで攻撃力を半分にできる。②：自分が「ピュアリィ」速攻魔法カードを発動した時に発動できる。フィールドのそのカードを下に重ねてＸ素材とする。その後、相手フィールドの魔法・罠カード１枚を選んで持ち主の手札に戻す事ができる。この効果は１ターンに３度まで使用できる。
-  ko:
+  ko: |-
+    레벨 2 몬스터 × 2
+    ①: 이 카드가 전투를 실행한 데미지 스텝 종료시에 발동할 수 있다. 덱에서 "퓨어리" 카드 1장을 패에 넣는다. 이 카드가 "퓨어리 행복메모리"를 엑시즈 소재로 하고 있을 경우, 필드의 앞면 표시 몬스터 1장을 고르고 공격력을 절반으로 할 수 있다. ②: 자신이 "퓨어리" 속공 마법 카드를 발동했을 때에 발동할 수 있다. 필드의 그 카드를 아래에 겹쳐 엑시즈 소재로 한다. 그 후, 상대 필드의 마법 / 함정 카드 1장을 고르고 주인의 패로 되돌릴 수 있다. 이 효과는 1턴에 3번까지 사용할 수 있다.
   zh-TW:
   zh-CN: |-
     2星怪兽×2
@@ -45,6 +47,12 @@ images:
 sets:
   ja:
   - set_number: DBAD-JP014
+    set_name: 'Deck Build Pack: Amazing Defenders'
+    rarities:
+    - Common
+    - Normal Parallel Rare
+  ko:
+  - set_number: DBAD-KR014
     set_name: 'Deck Build Pack: Amazing Defenders'
     rarities:
     - Common
