--- a/data/cards/54862960.yaml
+++ b/data/cards/54862960.yaml
@@ -9,8 +9,8 @@ name:
   pt:
   ja: <ruby>鏡<rt>かがみ</rt></ruby>の<ruby>御巫<rt>みかんこ</rt></ruby>ニニ
   ja_romaji: Kagami no Mikanko Nini
-  ko:
-  ko_rr:
+  ko: 거울의 미캉코 니니
+  ko_rr: Geoul-ui Mikangko Nini
   zh-TW:
   zh-CN: 镜之御巫 迩迩
 text:
@@ -23,7 +23,8 @@ text:
   pt:
   ja: |-
     このカード名の②の効果は１ターンに１度しか使用できない。①：このカードが装備カードを装備していない場合、このカードの戦闘で発生する自分への戦闘ダメージは０になり、装備している場合、このカードは戦闘では破壊されず、このカードの戦闘で発生する自分への戦闘ダメージは代わりに相手が受ける。②：このカードが装備カードを装備している場合、相手ターンに、相手フィールドの表側表示モンスター１体を対象として発動できる。そのモンスターのコントロールをエンドフェイズまで得る。
-  ko:
+  ko: |-
+    이 카드명의 ②의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 이 카드가 장착 카드를 장착하고 있지 않을 경우, 이 카드의 전투로 발생하는 자신에게로의 전투 데미지는 0 이 되고, 장착하고 있을 경우, 이 카드는 전투로는 파괴되지 않으며, 이 카드의 전투로 발생하는 자신에게로의 전투 데미지는 대신에 상대가 받는다. ②: 이 카드가 장착 카드를 장착하고 있을 경우, 상대 턴에, 상대 필드의 앞면 표시 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터의 컨트롤을 엔드 페이즈까지 얻는다.
   zh-TW:
   zh-CN: |-
     这个卡名的②的效果1回合只能使用1次。
@@ -43,6 +44,11 @@ images:
 sets:
   ja:
   - set_number: DBAD-JP026
+    set_name: 'Deck Build Pack: Amazing Defenders'
+    rarities:
+    - Super Rare
+  ko:
+  - set_number: DBAD-KR026
     set_name: 'Deck Build Pack: Amazing Defenders'
     rarities:
     - Super Rare
