--- a/data/cards/55584558.yaml
+++ b/data/cards/55584558.yaml
@@ -9,8 +9,8 @@ name:
   pt:
   ja: ピュアリィ・デリシャスメモリー
   ja_romaji: Pyuaryi Derishasu Memorī
-  ko:
-  ko_rr:
+  ko: 퓨어리 딜리셔스메모리
+  ko_rr: Pyueori Dillisyeoseumemori
   zh-TW:
   zh-CN: 纯爱妖精美味回忆
 text:
@@ -24,7 +24,8 @@ text:
   pt:
   ja: |-
     ①：フィールドのモンスター１体を選び、そのモンスターは次のターンの終了時まで戦闘では破壊されない。さらに、以下の効果を適用できる。●自分の手札を１枚選んで捨て、デッキからレベル１の「ピュアリィ」モンスター１体を特殊召喚する。②：このカードを素材として持っている「ピュアリィ」Ｘモンスターは以下の効果を得る。●このカードの攻撃力・守備力は、このカードのＸ素材の数×３００アップする。
-  ko:
+  ko: |-
+    ①: 필드의 몬스터 1장을 고르고, 그 몬스터는 다음 턴 종료시까지 전투로는 파괴되지 않는다. 추가로, 이하의 효과를 적용할 수 있다. ●자신의 패를 1장 골라 버리고, 덱에서 레벨 1 의 "퓨어리" 몬스터 1장을 특수 소환한다. ②: 이 카드를 소재로서 가지고 있는 "퓨어리" 엑시즈 몬스터는 이하의 효과를 얻는다. ●이 카드의 공격력 / 수비력은, 이 카드의 엑시즈 소재의 수 × 300 올린다.
   zh-TW:
   zh-CN: |-
     ①：选场上1只怪兽，那只怪兽直到下个回合的结束时不会被战斗破坏。并且，可以再让以下效果适用。
@@ -41,6 +42,12 @@ images:
 sets:
   ja:
   - set_number: DBAD-JP023
+    set_name: 'Deck Build Pack: Amazing Defenders'
+    rarities:
+    - Common
+    - Normal Parallel Rare
+  ko:
+  - set_number: DBAD-KR023
     set_name: 'Deck Build Pack: Amazing Defenders'
     rarities:
     - Common
