--- a/data/cards/56700100.yaml
+++ b/data/cards/56700100.yaml
@@ -9,8 +9,8 @@ name:
   pt:
   ja: ピュアリィ・マイフレンド
   ja_romaji: Pyuaryi Mai Furendo
-  ko:
-  ko_rr:
+  ko: 퓨어리 마이프렌드
+  ko_rr: Pyueori Maipeurendeu
   zh-TW:
   zh-CN: 我的纯爱妖精朋友
 text:
@@ -23,7 +23,8 @@ text:
   pt:
   ja: |-
     このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：５００ＬＰを払って発動できる。デッキから「ピュアリィ・マイフレンド」以外の「ピュアリィ」カード３枚を相手に見せ、相手はその中からランダムに１枚選ぶ。その１枚を自分の手札に加え、残りをデッキに戻す。②：自分フィールドの表側表示の「ピュアリィ」Ｘモンスターが相手によってフィールドから離れた場合に発動できる（ダメージステップでも発動可能）。自分の墓地から「ピュアリィ」速攻魔法カードを３枚まで選んで手札に加える（同名カードは１枚まで）。
-  ko:
+  ko: |-
+    이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 500 LP를 지불하고 발동할 수 있다. 덱에서 "퓨어리 마이프렌드" 이외의 "퓨어리" 카드 3장을 상대에게 보여주고, 상대는 그 중에서 무작위로 1장 고른다. 그 1장을 자신의 패에 넣고, 나머지를 덱으로 되돌린다. ②: 자신 필드의 앞면 표시의 "퓨어리" 엑시즈 몬스터가 상대에 의해 필드에서 벗어났을 경우에 발동할 수 있다(데미지 스텝에도 발동 가능). 자신 묘지에서 "퓨어리" 속공 마법 카드를 3장까지 고르고 패에 넣는다(같은 이름의 카드는 1장까지).
   zh-TW:
   zh-CN: |-
     这个卡名的①②的效果1回合各能使用1次。
@@ -39,6 +40,11 @@ images:
 sets:
   ja:
   - set_number: DBAD-JP020
+    set_name: 'Deck Build Pack: Amazing Defenders'
+    rarities:
+    - Super Rare
+  ko:
+  - set_number: DBAD-KR020
     set_name: 'Deck Build Pack: Amazing Defenders'
     rarities:
     - Super Rare
