--- a/data/cards/62777823.yaml
+++ b/data/cards/62777823.yaml
@@ -9,8 +9,8 @@ name:
   pt:
   ja: <ruby>ＣＯＮＴＡＩＮ<rt>コンテイン</rt></ruby>！
   ja_romaji: Kontein!
-  ko:
-  ko_rr:
+  ko: <ruby>CONTAIN!<rt>컨테인</rt></ruby>
+  ko_rr: Keontein!
   zh-TW:
   zh-CN: C控制！
 text:
@@ -24,7 +24,8 @@ text:
   pt:
   ja: |-
     このカード名はルール上「Ｒ－ＡＣＥ」カードとしても扱う。①：自分フィールドに「Ｒ－ＡＣＥ」モンスターが存在する場合、相手フィールドの効果モンスター１体を対象として発動できる。このターン、その効果モンスターは攻撃できず、効果は無効化される。自分フィールドに「Ｒ－ＡＣＥハイドラント」が存在する場合、さらにこのターン、そのモンスターは融合・Ｓ・Ｘ・リンク召喚の素材にできない。
-  ko:
+  ko: |-
+    이 카드명은 룰상 "R－ACE(레스큐 에이스)" 카드로도 취급한다. ①: 자신 필드에 "R－ACE(레스큐 에이스)" 몬스터가 존재할 경우, 상대 필드의 효과 몬스터 1장을 대상으로 하고 발동할 수 있다. 이 턴에, 그 효과 몬스터는 공격할 수 없으며, 효과는 무효화된다. 자신 필드에 "R－ACE(레스큐 에이스) 하이드런트"가 존재할 경우, 추가로 이 턴에, 그 몬스터는 융합 / 싱크로 / 엑시즈 / 링크 소환의 소재로 할 수 없다.
   zh-TW:
   zh-CN: |-
     这个卡名在规则上也当作「救援ACE队」卡使用。
@@ -39,6 +40,12 @@ images:
 sets:
   ja:
   - set_number: DBAD-JP011
+    set_name: 'Deck Build Pack: Amazing Defenders'
+    rarities:
+    - Common
+    - Normal Parallel Rare
+  ko:
+  - set_number: DBAD-KR011
     set_name: 'Deck Build Pack: Amazing Defenders'
     rarities:
     - Common
