--- a/data/cards/64612053.yaml
+++ b/data/cards/64612053.yaml
@@ -9,8 +9,8 @@ name:
   pt:
   ja: <ruby>Ｒ－ＡＣＥ<rt>レスキュー・エース</rt></ruby>ファイア・アタッカー
   ja_romaji: Resukyū Ēsu Faia Atakkā
-  ko:
-  ko_rr:
+  ko: <ruby>R－ACE<rt>레스큐 에이스</rt></ruby> 파이어 어태커
+  ko_rr: Reseukyu Eiseu Paieo Eotaekeo
   zh-TW:
   zh-CN: 救援ACE队 空中灭火机
 text:
@@ -23,7 +23,8 @@ text:
   pt:
   ja: |-
     このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：自分フィールドに「Ｒ－ＡＣＥファイア・アタッカー」以外の「Ｒ－ＡＣＥ」モンスターが召喚・特殊召喚された場合に発動できる。このカードを手札から特殊召喚する。②：ドロー以外の方法で相手の手札にカードが加わった場合に発動できる。自分はデッキから２枚ドローし、その後手札を１枚選んで捨てる。
-  ko:
+  ko: |-
+    이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 자신 필드에 "R－ACE(레스큐 에이스) 파이어 어태커" 이외의 "R－ACE(레스큐 에이스)" 몬스터가 일반 소환 / 특수 소환되었을 경우에 발동할 수 있다. 이 카드를 패에서 특수 소환한다. ②: 드로우 이외의 방법으로 상대의 패에 카드가 넣어졌을 경우에 발동할 수 있다. 자신은 덱에서 2장 드로우하고, 그 후 패를 1장 골라 버린다.
   zh-TW:
   zh-CN: |-
     这个卡名的①②的效果1回合各能使用1次。
@@ -43,6 +44,12 @@ images:
 sets:
   ja:
   - set_number: DBAD-JP005
+    set_name: 'Deck Build Pack: Amazing Defenders'
+    rarities:
+    - Common
+    - Normal Parallel Rare
+  ko:
+  - set_number: DBAD-KR005
     set_name: 'Deck Build Pack: Amazing Defenders'
     rarities:
     - Common
