--- a/data/cards/78199891.yaml
+++ b/data/cards/78199891.yaml
@@ -9,8 +9,8 @@ name:
   pt:
   ja: <ruby>御巫<rt>みかんこ</rt></ruby>かみくらべ
   ja_romaji: Mikanko Kamikurabe
-  ko:
-  ko_rr:
+  ko: 미캉코 카미쿠라베
+  ko_rr: Mikangko Kamikurabe
   zh-TW:
   zh-CN: 御巫神较
 text:
@@ -23,7 +23,8 @@ text:
   pt:
   ja: |-
     このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：自分フィールドに「御巫」モンスターが存在する場合、フィールドの表側表示モンスター１体を対象として発動できる。そのモンスターが装備可能な装備魔法カード１枚をデッキから選び、そのモンスターに装備する。②：このカードが墓地に存在する状態で、装備魔法カードが自分の墓地へ送られた場合、このカードを除外し、自分の墓地の装備魔法カード１枚を対象として発動できる。そのカードを手札に加える。
-  ko:
+  ko: |-
+    이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 자신 필드에 "미캉코" 몬스터가 존재할 경우, 필드의 앞면 표시 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터가 장착 가능한 장착 마법 카드 1장을 덱에서 고르고, 그 몬스터에 장착한다. ②: 이 카드가 묘지에 존재하는 상태에서, 장착 마법 카드가 자신 묘지로 보내졌을 경우, 이 카드를 제외하고, 자신 묘지의 장착 마법 카드 1장을 대상으로 하여 발동할 수 있다. 그 카드를 패에 넣는다.
   zh-TW:
   zh-CN: |-
     这个卡名的①②的效果1回合各能使用1次。
@@ -39,6 +40,12 @@ images:
 sets:
   ja:
   - set_number: DBAD-JP036
+    set_name: 'Deck Build Pack: Amazing Defenders'
+    rarities:
+    - Common
+    - Normal Parallel Rare
+  ko:
+  - set_number: DBAD-KR036
     set_name: 'Deck Build Pack: Amazing Defenders'
     rarities:
     - Common
