--- a/data/cards/80044027.yaml
+++ b/data/cards/80044027.yaml
@@ -9,8 +9,8 @@ name:
   pt:
   ja: <ruby>御巫<rt>みかんこ</rt></ruby>の<ruby>火叢<rt>ほむら</rt></ruby><ruby>舞<rt>まい</rt></ruby>
   ja_romaji: Mikanko no Homuramai
-  ko:
-  ko_rr:
+  ko: 미캉코의 화총무
+  ko_rr: Mikangko-ui Hwachongmu
   zh-TW:
   zh-CN: 御巫的火丛舞
 text:
@@ -23,7 +23,8 @@ text:
   pt:
   ja: |-
     このカード名のカードは１ターンに１枚しか発動できない。①：自分の手札・墓地から「御巫」モンスター１体を選んで特殊召喚し、このカードを装備する。その後、相手の墓地からモンスター１体を選んで効果を無効にして相手フィールドに特殊召喚できる。②：装備モンスターは効果では破壊されない。
-  ko:
+  ko: |-
+    이 카드명의 카드는 1턴에 1장밖에 발동할 수 없다. ①: 자신의 패 / 묘지에서 "미캉코" 몬스터 1장을 골라 특수 소환하고, 이 카드를 장착한다. 그 후, 상대 묘지에서 몬스터 1장을 골라 효과를 무효로 하고 상대 필드에 특수 소환할 수 있다. ②: 장착 몬스터는 효과로는 파괴되지 않는다.
   zh-TW:
   zh-CN: |-
     这个卡名的卡在1回合只能发动1张。
@@ -39,6 +40,11 @@ images:
 sets:
   ja:
   - set_number: DBAD-JP030
+    set_name: 'Deck Build Pack: Amazing Defenders'
+    rarities:
+    - Super Rare
+  ko:
+  - set_number: DBAD-KR030
     set_name: 'Deck Build Pack: Amazing Defenders'
     rarities:
     - Super Rare
