--- a/data/cards/81260679.yaml
+++ b/data/cards/81260679.yaml
@@ -9,8 +9,8 @@ name:
   pt:
   ja: オオヒメの<ruby>御巫<rt>みかんこ</rt></ruby>
   ja_romaji: Oohime no Mikanko
-  ko:
-  ko_rr:
+  ko: 오오히메의 미캉코
+  ko_rr: Oohime-ui Mikangko
   zh-TW:
   zh-CN: 大日女之御巫
 text:
@@ -23,7 +23,8 @@ text:
   pt:
   ja: |-
     「御巫神楽」により降臨。このカード名の①③の効果はそれぞれ１ターンに１度しか使用できない。①：手札のこのカードを相手に見せて発動できる。デッキから「オオヒメの御巫」以外の「御巫」カード１枚を手札に加える。その後、自分の手札を１枚選んで捨てる。②：このカードは戦闘では破壊されず、このカードの戦闘で発生する自分への戦闘ダメージは代わりに相手が受ける。③：自分・相手ターンに、自分の墓地の装備魔法カード１枚を対象として発動できる。そのカードを装備可能なフィールドのモンスター１体に装備する。
-  ko:
+  ko: |-
+    "미캉코 카구라"에 의해 의식 소환. 이 카드명의 ①③의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 패의 이 카드를 상대에게 보여주고 발동할 수 있다. 덱에서 "오오히메의 미캉코" 이외의 "미캉코" 카드 1장을 패에 넣는다. 그 후, 자신의 패를 1장 고르고 버린다. ②: 이 카드는 전투로는 파괴되지 않으며, 이 카드의 전투로 발생하는 자신에게로의 전투 데미지는 대신에 상대가 받는다. ③: 자신 / 상대 턴에, 자신 묘지의 장착 마법 카드 1장을 대상으로 하고 발동할 수 있다. 그 카드를 장착 가능한 필드의 몬스터 1장에 장착한다.
   zh-TW:
   zh-CN: |-
     「御巫神乐」降临。这个卡名的①③的效果1回合各能使用1次。
@@ -70,6 +71,12 @@ sets:
     - Ultra Rare
   ja:
   - set_number: DBAD-JP027
+    set_name: 'Deck Build Pack: Amazing Defenders'
+    rarities:
+    - Ultra Rare
+    - Secret Rare
+  ko:
+  - set_number: DBAD-KR027
     set_name: 'Deck Build Pack: Amazing Defenders'
     rarities:
     - Ultra Rare
