--- a/data/cards/82105704.yaml
+++ b/data/cards/82105704.yaml
@@ -9,8 +9,8 @@ name:
   pt:
   ja: ピュアリィ・ハッピーメモリー
   ja_romaji: Pyuaryi Happī Memorī
-  ko:
-  ko_rr:
+  ko: 퓨어리 행복메모리
+  ko_rr: Pyueori Haengbokmemori
   zh-TW:
   zh-CN: 纯爱妖精快乐回忆
 text:
@@ -24,7 +24,8 @@ text:
   pt:
   ja: |-
     ①：フィールドのカード１枚を選び、そのカードは次のターンの終了時まで１度だけ効果では破壊されない。さらに、以下の効果を適用できる。●自分の手札を１枚選んで捨て、デッキからレベル１の「ピュアリィ」モンスター１体を特殊召喚する。②：このカードを素材として持っている「ピュアリィ」Ｘモンスターは以下の効果を得る。●このカードは、このカードがＸ素材として持っている「ピュアリィ・ハッピーメモリー」の数＋１回まで１度のバトルフェイズ中にモンスターに攻撃できる。
-  ko:
+  ko: |-
+    ①: 필드의 카드 1장을 고르고, 그 카드는 다음 턴 종료시까지 1번만 효과로는 파괴되지 않는다. 추가로, 이하의 효과를 적용할 수 있다. ●자신의 패를 1장 골라 버리고, 덱에서 레벨 1 의 "퓨어리" 몬스터 1장을 특수 소환한다. ②: 이 카드를 소재로서 가지고 있는 "퓨어리" 엑시즈 몬스터는 이하의 효과를 얻는다. ●이 카드는, 이 카드가 엑시즈 소재로서 가지고 있는 "퓨어리 행복메모리"의 수 ＋ 1회까지 1번의 배틀 페이즈 중에 몬스터에 공격할 수 있다.
   zh-TW:
   zh-CN: |-
     ①：选场上1张卡，那张卡直到下个回合的结束时只有1次不会被效果破坏。并且，可以再让以下效果适用。
@@ -41,6 +42,12 @@ images:
 sets:
   ja:
   - set_number: DBAD-JP021
+    set_name: 'Deck Build Pack: Amazing Defenders'
+    rarities:
+    - Common
+    - Normal Parallel Rare
+  ko:
+  - set_number: DBAD-KR021
     set_name: 'Deck Build Pack: Amazing Defenders'
     rarities:
     - Common
