--- a/data/cards/82983267.yaml
+++ b/data/cards/82983267.yaml
@@ -9,8 +9,8 @@ name:
   pt:
   ja: ピュアリィープ！？
   ja_romaji: Pyuaryīpu!?
-  ko:
-  ko_rr:
+  ko: 퓨어리프!?
+  ko_rr: Pyueoripeu!?
   zh-TW:
   zh-CN: 纯爱妖精跳越！？
 text:
@@ -23,7 +23,8 @@ text:
   pt:
   ja: |-
     このカード名のカードは１ターンに１枚しか発動できない。①：自分フィールドの「ピュアリィ」Ｘモンスター１体を対象として発動できる。その自分のモンスターとはランクが異なる「ピュアリィ」Ｘモンスター１体を、対象のモンスターの上に重ねてＸ召喚扱いでＥＸデッキから特殊召喚する。この効果で特殊召喚したモンスターは次のターンのエンドフェイズに持ち主のＥＸデッキに戻る。②：墓地のこのカードを除外し、自分の墓地の「ピュアリィ」モンスターを３体まで対象として発動できる。そのモンスターをデッキに戻す。
-  ko:
+  ko: |-
+    이 카드명의 카드는 1턴에 1장밖에 발동할 수 없다. ①: 자신 필드의 "퓨어리" 엑시즈 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 자신 몬스터와는 랭크가 다른 "퓨어리" 엑시즈 몬스터 1장을, 대상 몬스터 위에 겹쳐 엑시즈 소환으로 취급하고 엑스트라 덱에서 특수 소환한다. 이 효과로 특수 소환한 몬스터는 다음 턴의 엔드 페이즈에 주인의 엑스트라 덱으로 되돌아간다. ②: 묘지의 이 카드를 제외하고, 자신 묘지의 "퓨어리" 몬스터를 3장까지 대상으로 하여 발동할 수 있다. 그 몬스터를 덱으로 되돌린다.
   zh-TW:
   zh-CN: |-
     这个卡名的卡在1回合只能发动1张。
@@ -39,6 +40,12 @@ images:
 sets:
   ja:
   - set_number: DBAD-JP024
+    set_name: 'Deck Build Pack: Amazing Defenders'
+    rarities:
+    - Common
+    - Normal Parallel Rare
+  ko:
+  - set_number: DBAD-KR024
     set_name: 'Deck Build Pack: Amazing Defenders'
     rarities:
     - Common
