--- a/data/cards/83827392.yaml
+++ b/data/cards/83827392.yaml
@@ -9,8 +9,8 @@ name:
   pt:
   ja: エクスピュアリィ・ノアール
   ja_romaji: Ekusupyuaryi Noāru
-  ko:
-  ko_rr:
+  ko: 엑스퓨어리 누아르
+  ko_rr: Ekseupyueori Noareu
   zh-TW:
   zh-CN: 历练纯爱妖精·黑暗妖精
 text:
@@ -25,7 +25,9 @@ text:
   ja: |-
     レベル７モンスター×２
     このカードはＸ素材を５つ以上持っている自分のランク２モンスターの上に重ねてＸ召喚する事もできる。①：Ｘ素材を５つ以上持っているこのカードは相手が発動した効果を受けない。②：このカードのＸ素材を２つ取り除き、相手のフィールド・墓地のカード１枚を対象として発動できる。そのカードを持ち主のデッキの一番下に戻す。このカードがレベル１の「ピュアリィ」モンスターをＸ素材としている場合、この効果は相手ターンでも発動できる。
-  ko:
+  ko: |-
+    레벨 7 몬스터 × 2
+    이 카드는 엑시즈 소재를 5개 이상 가지고 있는 자신의 랭크 2 몬스터 위에 겹쳐 엑시즈 소환할 수도 있다. ①: 엑시즈 소재를 5개 이상 가지고 있는 이 카드는 상대가 발동한 효과를 받지 않는다. ②: 이 카드의 엑시즈 소재를 2개 제거하고, 상대의 필드 / 묘지의 카드 1장을 대상으로 하여 발동할 수 있다. 그 카드를 주인의 덱 맨 아래로 되돌린다. 이 카드가 레벨 1 의 "퓨어리" 몬스터를 엑시즈 소재로 하고 있을 경우, 이 효과는 상대 턴에도 발동할 수 있다.
   zh-TW:
   zh-CN: |-
     7星怪兽×2
@@ -46,6 +48,11 @@ images:
 sets:
   ja:
   - set_number: DBAD-JP018
+    set_name: 'Deck Build Pack: Amazing Defenders'
+    rarities:
+    - Super Rare
+  ko:
+  - set_number: DBAD-KR018
     set_name: 'Deck Build Pack: Amazing Defenders'
     rarities:
     - Super Rare
