--- a/data/cards/90000652.yaml
+++ b/data/cards/90000652.yaml
@@ -9,8 +9,8 @@ name:
   pt:
   ja: <ruby>Ｒ－ＡＣＥ<rt>レスキュー・エース</rt></ruby>ファイア・エンジン
   ja_romaji: Resukyū Ēsu Faia Enjin
-  ko:
-  ko_rr:
+  ko: <ruby>R－ACE<rt>레스큐 에이스</rt></ruby> 파이어 엔진
+  ko_rr: Reseukyu Eiseu Paieo Enjin
   zh-TW:
   zh-CN: 救援ACE队 消防战车人
 text:
@@ -23,7 +23,8 @@ text:
   pt:
   ja: |-
     このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：自分フィールドに「Ｒ－ＡＣＥファイア・エンジン」以外の「Ｒ－ＡＣＥ」モンスターが召喚・特殊召喚された場合に発動できる。このカードを手札から特殊召喚する。②：相手フィールドにモンスターが特殊召喚された場合に発動できる。自分の手札・デッキ・墓地からレベル４以下の「Ｒ－ＡＣＥ」モンスター１体を選んで特殊召喚する。
-  ko:
+  ko: |-
+    이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 자신 필드에 "R－ACE(레스큐 에이스) 파이어 엔진" 이외의 "R－ACE(레스큐 에이스)" 몬스터가 일반 소환 / 특수 소환되었을 경우에 발동할 수 있다. 이 카드를 패에서 특수 소환한다. ②: 상대 필드에 몬스터가 특수 소환되었을 경우에 발동할 수 있다. 자신의 패 / 덱 / 묘지에서 레벨 4 이하의 "R－ACE(레스큐 에이스)" 몬스터 1장을 고르고 특수 소환한다.
   zh-TW:
   zh-CN: |-
     这个卡名的①②的效果1回合各能使用1次。
@@ -43,6 +44,11 @@ images:
 sets:
   ja:
   - set_number: DBAD-JP006
+    set_name: 'Deck Build Pack: Amazing Defenders'
+    rarities:
+    - Super Rare
+  ko:
+  - set_number: DBAD-KR006
     set_name: 'Deck Build Pack: Amazing Defenders'
     rarities:
     - Super Rare
