--- a/data/cards/91222209.yaml
+++ b/data/cards/91222209.yaml
@@ -9,8 +9,8 @@ name:
   pt:
   ja: <ruby>Ｒ－ＡＣＥ<rt>レスキュー・エース</rt></ruby>イントルーダー
   ja_romaji: Resukyū Ēsu Intorūdā
-  ko:
-  ko_rr:
+  ko: <ruby>R－ACE<rt>레스큐 에이스</rt></ruby> 인트루더
+  ko_rr: Reseukyu Eiseu Inteurudeo
   zh-TW:
   zh-CN: 救援ACE队 双脉冲炮灭火员
 text:
@@ -23,7 +23,8 @@ text:
   pt:
   ja: |-
     このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：このカードが召喚・特殊召喚に成功した場合に発動できる。デッキから「Ｒ－ＡＣＥ」罠カード１枚を手札に加える。②：相手がフィールドのモンスターの効果を発動した時、手札・フィールドのこのカードをリリースし、「Ｒ－ＡＣＥイントルーダー」以外の自分の墓地の「Ｒ－ＡＣＥ」モンスター１体を対象として発動できる。そのモンスターを特殊召喚する。
-  ko:
+  ko: |-
+    이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 이 카드가 일반 소환 / 특수 소환에 성공했을 경우에 발동할 수 있다. 덱에서 "R－ACE(레스큐 에이스)" 함정 카드 1장을 패에 넣는다. ②: 상대가 필드의 몬스터의 효과를 발동했을 때, 패 / 필드의 이 카드를 릴리스하고, "R－ACE(레스큐 에이스) 인트루더" 이외의 자신 묘지의 "R－ACE(레스큐 에이스)" 몬스터 1장을 대상으로 하여 발동할 수 있다. 그 몬스터를 특수 소환한다.
   zh-TW:
   zh-CN: |-
     这个卡名的①②的效果1回合各能使用1次。
@@ -43,6 +44,11 @@ images:
 sets:
   ja:
   - set_number: DBAD-JP003
+    set_name: 'Deck Build Pack: Amazing Defenders'
+    rarities:
+    - Super Rare
+  ko:
+  - set_number: DBAD-KR003
     set_name: 'Deck Build Pack: Amazing Defenders'
     rarities:
     - Super Rare
