--- a/data/cards/98049934.yaml
+++ b/data/cards/98049934.yaml
@@ -9,8 +9,8 @@ name:
   pt:
   ja: エピュアリィ・ビューティ
   ja_romaji: Epyuaryi Byūti
-  ko:
-  ko_rr:
+  ko: 에퓨어리 뷰티
+  ko_rr: Epyueori Byuti
   zh-TW:
   zh-CN: 亲历纯爱妖精·美丽妖精
 text:
@@ -25,7 +25,9 @@ text:
   ja: |-
     レベル２モンスター×２
     ①：１ターンに１度、相手フィールドの効果モンスター１体を対象として発動できる。そのモンスターの効果をターン終了時まで無効にする。このカードが「ピュアリィ・プリティメモリー」をＸ素材としている場合、この効果は相手ターンでも発動できる。②：自分が「ピュアリィ」速攻魔法カードを発動した時に発動できる。フィールドのそのカードをこのカードの下に重ねてＸ素材とする。その後、相手フィールドのモンスター１体を選んで表示形式を変更できる。この効果は１ターンに３度まで使用できる。
-  ko:
+  ko: |-
+    레벨 2 몬스터 × 2
+    ①: 1턴에 1번, 상대 필드의 효과 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터의 효과를 턴 종료시까지 무효로 한다. 이 카드가 "퓨어리 프리티메모리"를 엑시즈 소재로 하고 있을 경우, 이 효과는 상대 턴에도 발동할 수 있다. ②: 자신이 "퓨어리" 속공 마법 카드를 발동했을 때에 발동할 수 있다. 필드의 그 카드를 이 카드 아래에 겹쳐 엑시즈 소재로 한다. 그 후, 상대 필드의 몬스터 1장을 고르고 표시 형식을 변경할 수 있다. 이 효과는 1턴에 3번까지 사용할 수 있다.
   zh-TW:
   zh-CN: |-
     2星怪兽×2
@@ -45,6 +47,11 @@ images:
 sets:
   ja:
   - set_number: DBAD-JP015
+    set_name: 'Deck Build Pack: Amazing Defenders'
+    rarities:
+    - Super Rare
+  ko:
+  - set_number: DBAD-KR015
     set_name: 'Deck Build Pack: Amazing Defenders'
     rarities:
     - Super Rare
