--- a/data/cards/99162522.yaml
+++ b/data/cards/99162522.yaml
@@ -9,8 +9,8 @@ name:
   pt:
   ja: <ruby>ＥＸＴＩＮＧＵＩＳＨ<rt>エクスティンギッシュ</rt></ruby>！
   ja_romaji: Ekusutingisshu!
-  ko:
-  ko_rr:
+  ko: <ruby>EXTINGUISH!<rt>익스팅기시</rt></ruby>
+  ko_rr: Ikseutinggisi!
   zh-TW:
   zh-CN: E扑灭！
 text:
@@ -24,7 +24,8 @@ text:
   pt:
   ja: |-
     このカード名はルール上「Ｒ－ＡＣＥ」カードとしても扱う。①：自分フィールドに「Ｒ－ＡＣＥ」モンスターが存在する場合、相手フィールドの効果モンスター１体を対象として発動できる。そのモンスターを破壊する。自分フィールドに「Ｒ－ＡＣＥハイドラント」が存在する場合、さらにこのターン、相手はこの効果で破壊したモンスター及びそのモンスターと元々のカード名が同じモンスターの効果を発動できない。
-  ko:
+  ko: |-
+    이 카드명은 룰상 "R－ACE(레스큐 에이스)" 카드로도 취급한다. ①: 자신 필드에 "R－ACE(레스큐 에이스)" 몬스터가 존재할 경우, 상대 필드의 효과 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터를 파괴한다. 자신 필드에 "R－ACE(레스큐 에이스) 하이드런트"가 존재할 경우, 추가로 이 턴에, 상대는 이 효과로 파괴한 몬스터 및 그 몬스터와 원래의 카드명이 같은 몬스터의 효과를 발동할 수 없다.
   zh-TW:
   zh-CN: |-
     这个卡名在规则上也当作「救援ACE队」卡使用。
@@ -39,6 +40,12 @@ images:
 sets:
   ja:
   - set_number: DBAD-JP012
+    set_name: 'Deck Build Pack: Amazing Defenders'
+    rarities:
+    - Common
+    - Normal Parallel Rare
+  ko:
+  - set_number: DBAD-KR012
     set_name: 'Deck Build Pack: Amazing Defenders'
     rarities:
     - Common
