--- a/data/cards/99984170.yaml
+++ b/data/cards/99984170.yaml
@@ -9,8 +9,8 @@ name:
   pt:
   ja: <ruby>ＲＥＳＣＵＥ<rt>レスキュー</rt></ruby>！
   ja_romaji: Resukyū!
-  ko:
-  ko_rr:
+  ko: <ruby>RESCUE!<rt>레스큐</rt></ruby>
+  ko_rr: Reseukyu!
   zh-TW:
   zh-CN: R救援！
 text:
@@ -24,7 +24,8 @@ text:
   pt:
   ja: |-
     このカード名はルール上「Ｒ－ＡＣＥ」カードとしても扱う。このカード名のカードは１ターンに１枚しか発動できない。①：自分の墓地の「Ｒ－ＡＣＥ」モンスター１体を対象として発動できる。そのモンスターを自分フィールドに特殊召喚する。自分フィールドに「Ｒ－ＡＣＥハイドラント」が存在する場合、代わりに相手の墓地のモンスター１体を対象とする事もできる。
-  ko:
+  ko: |-
+    이 카드명은 룰상 "R－ACE(레스큐 에이스)" 카드로도 취급한다. 이 카드명의 카드는 1턴에 1장밖에 발동할 수 없다. ①: 자신 묘지의 "R－ACE(레스큐 에이스)" 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터를 자신 필드에 특수 소환한다. 자신 필드에 "R－ACE(레스큐 에이스) 하이드런트"가 존재할 경우, 대신에 상대 묘지의 몬스터 1장을 대상으로 할 수도 있다.
   zh-TW:
   zh-CN: |-
     这个卡名在规则上也当作「救援ACE队」卡使用。这个卡名的卡在1回合只能发动1张。
@@ -39,6 +40,12 @@ images:
 sets:
   ja:
   - set_number: DBAD-JP009
+    set_name: 'Deck Build Pack: Amazing Defenders'
+    rarities:
+    - Common
+    - Normal Parallel Rare
+  ko:
+  - set_number: DBAD-KR009
     set_name: 'Deck Build Pack: Amazing Defenders'
     rarities:
     - Common
