--- a/data/cards/99789342.yaml
+++ b/data/cards/99789342.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 黑魔术的幕帘
 text:
   en: |-
-    Pay half your LP; Special Summon 1 "Dark Magician" from your Deck. You cannot Summon other monsters the turn you activate this card (but you can Set).
+    Pay half your LP; Special Summon 1 "Dark Magician" from your Deck. You cannot Summon other monsters the turn you activate this card (but you can Normal Set).
   de: |-
     Zahle die Hälfte deiner LP; beschwöre 1 „Dunkler Magier“ als Spezialbeschwörung von deinem Deck. Du kannst in dem Spielzug, in dem du diese Karte aktivierst, keine anderen Monster beschwören. (Aber du kannst Monster setzen.)
   es: |-
@@ -40,7 +40,7 @@ images:
   image: '  DarkMagicCurtain-SDMY-JP-C.png'
   illustration: '   DarkMagicCurtain-TF04-JP-VG.jpg'
 - index: '1.1'
-  image: DarkMagicCurtain-SBCB-EN-C-1E.png
+  image: DarkMagicCurtain-STP4-EN-UR-UE.png
   illustration: DarkMagicCurtain-TF04-EN-VG.jpg
 sets:
   en:
