--- a/data/cards/yugipedia928191.yaml
+++ b/data/cards/yugipedia928191.yaml
@@ -7,8 +7,8 @@ name:
   fr:
   it:
   pt:
-  ja: 電脳堺虎－虎々
-  ja_romaji:
+  ja: <ruby>電<rt>でん</rt></ruby><ruby>脳<rt>のう</rt></ruby><ruby>堺<rt>かい</rt></ruby><ruby>虎<rt>こ</rt></ruby>－<ruby>虎<rt>フゥ</rt></ruby><ruby>々<rt>フゥ</rt></ruby>
+  ja_romaji: Dennōkaiko - Fwufwu
   ko:
   ko_rr:
   zh-TW:
@@ -16,10 +16,9 @@ name:
 text:
   en: |-
     2+ Level 9 monsters
-    This card gains the following effects based on the number of "Virtual World Gate" cards you control.
+    Once per turn (Quick Effect): You can detach 1 material from this card, then target 1 Effect Monster you control and 1 Effect Monster on the field with a different Attribute and Type; negate their effects until the end of this turn. This card gains these effects based on the number of "Virtual World Gate" cards you control.
     ● 2+: This card can attack directly.
     ● 4: This card is unaffected by cards' activated effects, except "Virtual World" cards.
-    Once per turn (Quick Effect): You can detach 1 material from this card, then target 1 Effect Monster you control and 1 Effect Monster on the field with a different Attribute and Type; negate their effects until the end of this turn.
   de:
   es:
   fr:
