--- a/data/cards/68540058.yaml
+++ b/data/cards/68540058.yaml
@@ -42,7 +42,7 @@ images:
   illustration: Metalmorph-MADU-EN-VG-artwork.png
 - index: 2
   image: Metalmorph-MIL1-EN-C-1E.png
-  illustration: Metalmorph-TF04-JP-VG-2.png
+  illustration: Metalmorph-TF05-JP-VG-2-artwork.png
 sets:
   en:
   - set_number: PP01-EN014
