--- a/rush.yaml
+++ b/rush.yaml
@@ -87486,3 +87486,58 @@ sets:
     rarities:
     - Common
 yugipedia_page_id: 928193
+---
+konami_id:
+name:
+  en: Star Trio
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: スター・トライオ
+  ja_romaji:
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    You have no other monsters on your field during the turn you Normal Summoned this card.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Excavate the top 3 cards of your Deck. Send all excavated Galaxy Type monsters to the Graveyard. Place the remaining cards on the bottom of your Deck in any order.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Galaxy / Effect
+attribute: LIGHT
+level: 3
+atk: 300
+def: 1300
+images:
+- index: 1
+  image: StarTrio-RDRLP2-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/RLP2-JP001
+    set_name: Yu-Gi-Oh! Rush Duel LP Volume 2 promotional card
+    rarities:
+    - Ultra Rare
+yugipedia_page_id: 928219
