--- a/data/cards/01184620.yaml
+++ b/data/cards/01184620.yaml
@@ -72,7 +72,7 @@ sets:
     set_name: Metal Raiders
     rarities:
     - Common
-  - set_number: SDK-009
+  - set_number: SDK-A009
     set_name: 'Starter Deck: Kaiba'
     rarities:
     - Common
