--- a/data/cards/72892473.yaml
+++ b/data/cards/72892473.yaml
@@ -97,6 +97,10 @@ sets:
     set_name: Retro Pack
     rarities:
     - Rare
+  - set_number: SDY-A042
+    set_name: 'Starter Deck: Yugi'
+    rarities:
+    - Super Rare
   de:
   - set_number: SDY-G038
     set_name: 'Starter Deck: Yugi'
