--- a/data/cards/99171160.yaml
+++ b/data/cards/99171160.yaml
@@ -42,10 +42,10 @@ def: 400
 images:
 - index: 1
   image: '  Kozaky-EE2-JP-C.png'
-  illustration: '   Kozaky-TF04-JP-VG.png'
+  illustration: '   Kozaky-TF05-JP-VG-artwork.png'
 - index: '1.1'
   image: Kozaky-DR2-EN-C-UE.png
-  illustration: Kozaky-TF04-EN-VG.png
+  illustration: Kozaky-TF04-EN-VG-artwork.png
 sets:
   en:
   - set_number: DR2-EN171
