--- a/data/cards/14087893.yaml
+++ b/data/cards/14087893.yaml
@@ -41,10 +41,10 @@ series:
 images:
 - index: 1
   image: '  BookofMoon-YSDS-EN-C-UE.png'
-  illustration: BookofMoon-TF04-JP-VG.png
+  illustration: BookofMoon-TF05-JP-VG-artwork.png
 - index: '1.1'
   image: BookofMoon-SGX1-EN-C-1E.png
-  illustration: BookofMoon-TF04-EN-VG.png
+  illustration: BookofMoon-TF04-EN-VG-artwork.png
 sets:
   en:
   - set_number: DB2-EN232
