--- a/data/cards/50323155.yaml
+++ b/data/cards/50323155.yaml
@@ -17,19 +17,19 @@ text:
   en: |-
     When your opponent would Special Summon exactly 1 monster: Negate the Special Summon, and if you do, destroy it.
   de: |-
-    Annulliere die Spezialbeschwörung von 1 Monster deines Gegners und zerstöre es.
+    Wenn dein Gegner genau 1 Monster als Spezialbeschwörung beschwören würde: Annulliere die Spezialbeschwörung und falls du dies tust, zerstöre es.
   es: |-
     Cuando tu adversario fuera a Invocar de Modo Especial exactamente 1 monstruo: niega la Invocación Especial y, si lo haces, destruye al monstruo.
   fr: |-
     Lorsque votre adversaire va Invoquer Spécialement exactement 1 monstre : annulez l'Invocation Spéciale, et si vous le faites, détruisez-le.
   it: |-
-    Quando il tuo avversario sta per Evocare Specialmente un Mostro: annulla l'Evocazione Speciale e, se lo fai, distruggilo.
+    Quando il tuo avversario sta per Evocare Specialmente esattamente 1 mostro: annulla l'Evocazione Speciale e, se lo fai, distruggilo.
   pt: |-
     Quando seu oponente Invocaria exatamente 1 monstro por Invocação-Especial: negue a Invocação-Especial e, se isso acontecer, destrua-o.
   ja: |-
-    相手モンスター１体の特殊召喚を無効にし破壊する。
+    ①：相手がモンスター１体のみを特殊召喚する際に発動できる。その特殊召喚を無効にし、そのモンスターを破壊する。
   ko: |-
-    상대 몬스터 1장의 특수 소환을 무효로 하고, 그것을 파괴한다.
+    상대 몬스터 1장의 특수 소환을 무효로 하고 파괴한다.
   zh-TW: |-
     对手1只怪兽的特殊召唤无效并破坏。
   zh-CN: |-
