--- a/data/cards/78391364.yaml
+++ b/data/cards/78391364.yaml
@@ -27,9 +27,9 @@ text:
   pt: |-
     Se seu oponente controlar 2 ou mais monstros e você não controlar nenhum monstro, você pode Invocar este card por Invocação-Especial (da sua mão). Se este card for Invocado por Invocação-Normal ou Especial: você pode escolher 1 monstro "Samurai Superpesado" de Nível 4 ou menos no seu Cemitério, exceto "Samurai Superpesado de Escamas"; Invoque-o por Invocação-Especial em Posição de Defesa. Você só pode usar este efeito de "Samurai Superpesado de Escamas" uma vez por turno.
   ja: |-
-    「超重武者テンＢ－Ｎ」の②の効果は１ターンに１度しか使用できない。①：相手フィールドにモンスターが２体以上存在し、自分フィールドにモンスターが存在しない場合、このカードは手札から特殊召喚できる。②：このカードが召喚・特殊召喚に成功した場合、「超重武者テンＢ－Ｎ」以外の自分の墓地のレベル４以下の「超重武者」モンスター１体を対象として発動できる。そのモンスターを守備表示で特殊召喚する。
+    このカード名の②の効果は１ターンに１度しか使用できない。①：相手フィールドにモンスターが２体以上存在し、自分フィールドにモンスターが存在しない場合、このカードは手札から特殊召喚できる。②：このカードが召喚・特殊召喚に成功した場合、「超重武者テンＢ－Ｎ」以外の自分の墓地のレベル４以下の「超重武者」モンスター１体を対象として発動できる。そのモンスターを守備表示で特殊召喚する。
   ko: |-
-    "초중무사 텐B-N(빈)"의 ②의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 상대 필드에 몬스터가 2장 이상 존재하고, 자신의 필드에 몬스터가 존재하지 않을 경우, 이 카드는 패에서 특수 소환할 수 있다. ②: 이 카드가 일반 소환 / 특수 소환에 성공했을 경우, "초중무사 텐B-N(빈)" 이외의 자신 묘지의 레벨 4 이하의 "초중무사" 몬스터 1장을 대상으로 발동할 수 있다. 그 몬스터를 수비 표시에서 특수 소환한다.
+    "초중무사 텐B－N(빈)"의 ②의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 상대 필드에 몬스터가 2장 이상 존재하고, 자신 필드에 몬스터가 존재하지 않을 경우, 이 카드는 패에서 특수 소환할 수 있다. ②: 이 카드가 일반 소환 / 특수 소환에 성공했을 경우, "초중무사 텐B－N(빈)" 이외의 자신 묘지의 레벨 4 이하 "초중무사" 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터를 수비 표시로 특수 소환한다.
   zh-TW:
   zh-CN: |-
     「超重武者 天秤B-N」的②的效果1回合只能使用1次。①：对方场上有怪兽2只以上存在，自己场上没有怪兽存在的场合，这张卡可以从手卡特殊召唤。②：这张卡召唤·特殊召唤成功的场合，以「超重武者 天秤B-N」以外的自己墓地1只4星以下的「超重武者」怪兽为对象才能发动。那只怪兽守备表示特殊召唤。
