--- a/data/rush/18650.yaml
+++ b/data/rush/18650.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 18650
 name:
   en: Princessleon
   de:
@@ -20,7 +20,8 @@ text:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    可愛いものが大好きなカメレオン。お気に入りを見つけては飽きるまで口の中に入れて一緒に過ごす。
   ko:
   zh-TW:
   zh-CN:
