--- a/data/rush/yugipedia928219.yaml
+++ b/data/rush/yugipedia928219.yaml
@@ -1,13 +1,13 @@
 konami_id:
 name:
-  en: Star Trio
+  en: Star Tri-Leo
   de:
   es:
   fr:
   it:
   pt:
   ja: スター・トライオ
-  ja_romaji:
+  ja_romaji: Sutā Toraio
   ko:
   ko_rr:
   zh-TW:
