--- a/data/cards/00269012.yaml
+++ b/data/cards/00269012.yaml
@@ -27,7 +27,7 @@ text:
   pt: |-
     Monstros de Nível 10 ou mais no campo não podem ser escolhidos como alvo ou destruídos por efeitos de card. Se um monstro de Nível 10 ou mais destruir um monstro em batalha e enviá-lo para o Cemitério: o duelista que controlava o monstro destruído sofre 1000 de dano. Quando este card no campo for destruído por um efeito de card e enviado para o Cemitério: você pode adicionar 1 monstro DIVINO do seu Deck à sua mão.
   ja: |-
-    ①：フィールドのレベル１０以上のモンスターは効果の対象にならず、効果では破壊されない。②：フィールドのレベル１０以上のモンスターが戦闘でモンスターを破壊し墓地へ送った場合に発動する。破壊されたモンスターのコントローラーは１０００ダメージを受ける。③：フィールドのこのカードが効果で破壊され墓地へ送られた時に発動できる。デッキから神属性モンスター１体を手札に加える。
+    ①：フィールドのレベル１０以上のモンスターは効果の対象にならず、効果では破壊されない。②：自分または相手のレベル１０以上のモンスターが戦闘でモンスターを破壊し墓地へ送った場合に発動する。破壊されたモンスターのコントローラーは１０００ダメージを受ける。③：フィールドのこのカードが効果で破壊され墓地へ送られた時に発動できる。デッキから神属性モンスター１体を手札に加える。
   ko: |-
     ①: 필드의 레벨 10 이상의 몬스터는 효과의 대상이 되지 않으며, 효과로는 파괴되지 않는다. ②: 필드의 레벨 10 이상의 몬스터가 전투로 몬스터를 파괴하고 묘지로 보냈을 경우에 발동한다. 파괴된 몬스터의 컨트롤러는 1000 데미지를 받는다. ③: 필드의 이 카드가 효과로 파괴되어 묘지로 보내졌을 때에 발동할 수 있다. 덱에서 신 속성 몬스터 1장을 패에 넣는다.
   zh-TW:
