--- a/data/cards/11674673.yaml
+++ b/data/cards/11674673.yaml
@@ -34,7 +34,7 @@ text:
     Se um monstro for Invocado por Invocação-Especial em uma zona para a qual este card apontar (exceto durante a Etapa de Dano): você pode banir 1 Magia do seu Cemitério; adicione 1 Monstro de Ritual Ciberso e 1 "Cinet Ritual" do seu Deck à sua mão. Durante sua Fase Principal, se este efeito foi ativado neste turno: você pode escolher 1 monstro Ciberso de Nível 4 ou menos no seu Cemitério; Invoque-o por Invocação-Especial. Você só pode usar cada efeito de "Bruxa Ciberso" uma vez por turno.
   ja: |-
     サイバース族モンスター２体
-    このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：このカードのリンク先にモンスターが特殊召喚された場合、自分の墓地の魔法カード１枚を除外して発動できる。デッキからサイバース族の儀式モンスター１体と「サイバネット・リチューアル」１枚を手札に加える。②：このカードの①の効果を発動したターンの自分メインフェイズに、自分の墓地のレベル４以下のサイバース族モンスター１体を対象として発動できる。そのモンスターを特殊召喚する。
+    このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：このカードのリンク先にモンスターが特殊召喚された場合、自分の墓地から魔法カード１枚を除外して発動できる。デッキからサイバース族の儀式モンスター１体と「サイバネット・リチューアル」１枚を手札に加える。②：このカードの①の効果を発動したターンの自分メインフェイズに、自分の墓地のレベル４以下のサイバース族モンスター１体を対象として発動できる。そのモンスターを特殊召喚する。
   ko: |-
     사이버스족 몬스터 2장
     이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 이 카드의 링크 앞에 몬스터가 특수 소환되었을 경우, 자신 묘지의 마법 카드 1장을 제외하고 발동할 수 있다. 덱에서 사이버스족의 의식 몬스터 1장과 "사이바넷 리츄얼" 1장을 패에 넣는다. ②: 이 카드의 ①의 효과를 발동한 턴의 자신 메인 페이즈에, 자신 묘지의 레벨 4 이하의 사이버스족 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터를 특수 소환한다.
