--- a/data/cards/38495396.yaml
+++ b/data/cards/38495396.yaml
@@ -12,7 +12,7 @@ name:
   ko: 세이크리드 트레미스M7
   ko_rr:
   zh-TW:
-  zh-CN: 星圣 托勒密星团M７
+  zh-CN: 星圣 托勒密星团M7
 text:
   en: |-
     2 Level 6 monsters
@@ -34,14 +34,14 @@ text:
     Você também pode Invocar este card por Invocação-Xyz ao usar um Monstro Xyz "Constelar" que você controla como matéria, exceto "Constelar Ptolomeu M7". (Transfira as matérias dele para este card.) Se Invocado desta forma, o seguinte efeito não pode ser ativado neste turno. Uma vez por turno: você pode desassociar 1 matéria deste card e, depois, escolha 1 monstro no campo ou em qualquer Cemitério; devolva o alvo para a mão.
   ja: |-
     レベル６モンスター×２
-    このカードは「セイクリッド・トレミス<ruby>Ｍ<rt>メシエ</rt></ruby><ruby>７<rt>セブン</rt></ruby>」以外の自分フィールドの「セイクリッド」Ｘモンスターの上にこのカードを重ねてＸ召喚する事もできる。この方法で特殊召喚した場合、このターンこのカードの効果は発動できない。①：１ターンに１度、このカードのＸ素材を１つ取り除き、自分または相手の、フィールド・墓地のモンスター１体を対象として発動できる。そのモンスターを持ち主の手札に戻す。
+    このカードは「セイクリッド・トレミスＭ７」以外の自分フィールドの「セイクリッド」Ｘモンスターの上に重ねてＸ召喚する事もできる。この方法で特殊召喚したターン、このカードの①の効果は発動できない。①：１ターンに１度、このカードのＸ素材を１つ取り除き、自分または相手の、フィールド・墓地のモンスター１体を対象として発動できる。そのモンスターを持ち主の手札に戻す。
   ko: |-
-    레벨 6 몬스터 x 2
-    이 카드는 "세이크리드 트레미스 M7" 이외의 자신 필드의 "세이크리드" 엑시즈 몬스터 위에 이 카드를 겹쳐 엑시즈 소환할 수도 있다. 이 방법으로 특수 소환했을 경우, 이 턴에 이 카드의 효과는 발동할 수 없다. ① : 1턴에 1번, 이 카드의 엑시즈 소재를 1개 제거하고, 자신 또는 상대의, 필드 / 묘지의 몬스터 1장을 대상으로 하여 발동할 수 있다. 그 몬스터를 주인의 패로 되돌린다.
+    레벨 6 몬스터 × 2
+    이 카드는 "세이크리드 트레미스M7" 이외의 자신 필드의 "세이크리드" 엑시즈 몬스터 위에 이 카드를 겹쳐 엑시즈 소환할 수도 있다. 이 방법으로 특수 소환했을 경우, 이 턴에 이 카드의 효과는 발동할 수 없다. ①: 1턴에 1번, 이 카드의 엑시즈 소재를 1개 제거하고, 자신 또는 상대의, 필드 / 묘지의 몬스터 1장을 대상으로 하여 발동할 수 있다. 그 몬스터를 주인의 패로 되돌린다.
   zh-TW:
   zh-CN: |-
     等级6怪兽×2
-    此卡也可重叠在自己场上"星圣 托勒密星团M7"以外的"星圣"超量怪兽上面来超量召唤。以此方法特殊召唤的情况下，此回合此卡的效果不可发动。①：1回合1次，去除此卡的1个超量素材，以自己或对手的场上・墓地的1只怪兽为对象可以发动。将该怪兽放回持有者的手牌。
+    此卡也可重叠在自己场上“星圣 托勒密星团M7”以外的“星圣”超量怪兽上面来超量召唤。以此方法特殊召唤的情况下，此回合此卡的效果不可发动。①：1回合1次，去除此卡的1个超量素材，以自己或对手的场上・墓地的1只怪兽为对象可以发动。将该怪兽放回持有者的手牌。
 card_type: Monster
 monster_type_line: Machine / Xyz / Effect
 attribute: LIGHT
