--- a/data/cards/55226153.yaml
+++ b/data/cards/55226153.yaml
@@ -32,7 +32,7 @@ text:
     이 카드명의 ①의 몬스터 효과는 1턴에 1번밖에 사용할 수 없다. ①: 이 카드가 일반 소환 / 특수 소환에 성공했을 경우에 발동할 수 있다. 덱에서 "도도레미코드 큐티아" 이외의 "도레미코드" 펜듈럼 몬스터 1장을 패에 넣는다. ②: 자신의 펜듈럼 존에 짝수의 펜듈럼 스케일이 존재하는 한, 자신 필드의 "도레미코드" 펜듈럼 몬스터의 공격력은 자신의 펜듈럼 스케일 × 100 올린다.
   zh-TW:
   zh-CN: |-
-    此卡名的①怪兽效果1回合仅可使用1次。①：此卡召唤・特殊召唤成功的情况下可以发动。从牌组将"哆音服和弦・秋迪娅"以外的1只"音服和弦"灵摆怪兽加入手牌。②：只要自己的灵摆区域有偶数的灵摆刻度存在，自己场上的"音服和弦"灵摆怪兽的攻击力上升相当于自身灵摆刻度×100的数值。
+    此卡名的①怪兽效果1回合仅可使用1次。①：此卡召唤・特殊召唤成功的情况下可以发动。从牌组将“哆音服和弦・秋迪娅”以外的1只“音服和弦”灵摆怪兽加入手牌。②：只要自己的灵摆区域有偶数的灵摆刻度存在，自己场上的“音服和弦”灵摆怪兽的攻击力上升相当于自身灵摆刻度×100的数值。
 card_type: Monster
 monster_type_line: Fairy / Pendulum / Effect
 attribute: EARTH
@@ -59,7 +59,7 @@ pendulum_effect:
     ①: 자신의 "도레미코드" 펜듈럼 몬스터의 펜듈럼 소환은 무효화되지 않는다.
   zh-TW:
   zh-CN: |-
-    ①：自己的"音服和弦"灵摆怪兽的灵摆召唤不会被无效化。
+    ①：自己的“音服和弦”灵摆怪兽的灵摆召唤不会被无效化。
 series:
 - Solfachord
 images:
@@ -96,6 +96,10 @@ sets:
     set_name: 'Deck Build Pack: Ancient Guardians'
     rarities:
     - Super Rare
+  - set_number: 23TP-JP107
+    set_name: Tournament Pack 2023 Vol.1
+    rarities:
+    - Common
   ko:
   - set_number: DBAG-KR014
     set_name: 'Deck Build Pack: Ancient Guardians'
