--- a/data/cards/64880894.yaml
+++ b/data/cards/64880894.yaml
@@ -34,13 +34,13 @@ text:
     Quando este card for Invocado por Invocação-Sincro: você pode comprar 1 card. Você só pode usar este efeito de "Guerreiro Algoz da Poeira Estelar" uma vez por turno. Este card pode atacar todos os monstros Invocados por Invocação-Especial que seu oponente controla, uma vez cada.
   ja: |-
     チューナー＋チューナー以外のモンスター１体以上
-    「スターダスト・チャージ・ウォリアー」の①の効果は１ターンに１度しか使用できない。①：このカードがＳ召喚に成功した時に発動できる。自分はデッキから１枚ドローする。②：このカードは特殊召喚された相手モンスター全てに１回ずつ攻撃できる。
+    このカード名の①の効果は１ターンに１度しか使用できない。①：このカードがＳ召喚に成功した時に発動できる。自分はデッキから１枚ドローする。②：このカードは特殊召喚された相手モンスター全てに１回ずつ攻撃できる。
   ko: |-
     튜너 ＋ 튜너 이외의 몬스터 1장 이상
     "스타더스트 차지 워리어"의 ①의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 이 카드가 싱크로 소환에 성공했을 때에 발동할 수 있다. 자신은 덱에서 1장 드로우한다. ②: 이 카드는 특수 소환된 상대 몬스터 전부에 1회씩 공격할 수 있다.
   zh-TW:
   zh-CN: |-
-    协调＋1只以上协调以外的怪兽
+    协调+1只以上协调以外的怪兽
     此卡名的①效果1回合仅可使用1次。①：此卡同步召唤成功时可以发动。自己从牌组抽1张。②：此卡可攻击被特殊召唤的所有对手怪兽各1次。
 card_type: Monster
 monster_type_line: Warrior / Synchro / Effect
