--- a/data/cards/71278040.yaml
+++ b/data/cards/71278040.yaml
@@ -44,7 +44,7 @@ text:
     이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 이 카드가 패에 존재하고, 자신이 링크 소환에 성공했을 경우에 발동할 수 있다. 이 카드를 그 링크 몬스터의 링크 앞이 되는 자신 필드에 특수 소환한다. ②: 이 카드가 일반 소환 / 특수 소환에 성공했을 경우에 발동할 수 있다. 덱에서 "패러렐엑시드" 1장을 특수 소환한다. ③: "패러렐엑시드"의 효과로 특수 소환한 이 카드의 레벨은 4 가 되고, 원래의 공격력 / 수비력은 절반이 된다.
   zh-TW:
   zh-CN: |-
-    此卡名的①②效果1回合仅可各使用1次。①：此卡存在于手牌，自己连接召唤成功的情况下可以发动。将此卡特殊召唤至该连接怪兽连接端的自己场上。②：此卡召唤・特殊召唤成功的情况下可以发动。从牌组将1只"平行超越者"特殊召唤。③：因"平行超越者"的效果特殊召唤的此卡的等级变为4，原本的攻击力・守备力变为一半。
+    此卡名的①②效果1回合仅可各使用1次。①：此卡存在于手牌，自己连接召唤成功的情况下可以发动。将此卡特殊召唤至该连接怪兽连接端的自己场上。②：此卡召唤・特殊召唤成功的情况下可以发动。从牌组将1只“平行超越者”特殊召唤。③：因“平行超越者”的效果特殊召唤的此卡的等级变为4，原本的攻击力・守备力变为一半。
 card_type: Monster
 monster_type_line: Cyberse / Effect
 attribute: WIND
@@ -125,6 +125,10 @@ sets:
     set_name: Eternity Code
     rarities:
     - Common
+  - set_number: 23TP-JP101
+    set_name: Tournament Pack 2023 Vol.1
+    rarities:
+    - Super Rare
   ko:
   - set_number: ETCO-KR001
     set_name: Eternity Code
