--- a/data/cards/91949988.yaml
+++ b/data/cards/91949988.yaml
@@ -34,14 +34,14 @@ text:
     Você também pode Invocar este card por Invocação-Xyz ao usar um Monstro Xyz de Classe 5 ou 6 que você controla como matéria. (Transfira suas matérias para este card.) Se este card atacar um monstro em Posição de Defesa, cause dano de batalha perfurante.
   ja: |-
     レベル７モンスター×２
-    このカードは自分フィールド上のランク５・６のエクシーズモンスターの上にこのカードを重ねてエクシーズ召喚する事もできる。このカードが守備表示モンスターを攻撃した時、その守備力を攻撃力が超えていれば、その数値だけ相手ライフに戦闘ダメージを与える。
+    このカードは自分フィールドのランク５・６のＸモンスターの上に重ねてＸ召喚する事もできる。①：このカードが守備表示モンスターを攻撃した場合、その守備力を攻撃力が超えた分だけ戦闘ダメージを与える。
   ko: |-
     레벨 7 몬스터 × 2
     이 카드는 자신 필드 위의 랭크 5 / 6의 엑시즈 몬스터 위에 이 카드를 겹쳐 엑시즈 소환할 수도 있다. 이 카드가 수비 표시 몬스터를 공격했을 때, 그 수비력을 공격력이 넘었으면, 그 수치만큼 상대 라이프에 전투 데미지를 준다.
   zh-TW:
   zh-CN: |-
     等级7怪兽×2
-    此卡也可重叠在自己场上阶级5・6的超量怪兽上面来超量召唤。①：此卡攻击守备表示怪兽的情况下，依攻击力超过该怪兽守备力的数值来给予战斗伤害。
+    此卡也可重叠在自己场上阶级5・6的超量怪兽上面来超量召唤。①：此卡攻击守备表示怪兽的情况下，依攻击力超出该怪兽守备力的数值来给予战斗伤害。
 card_type: Monster
 monster_type_line: Dragon / Xyz / Effect
 attribute: WIND
