--- a/data/cards/yugipedia928313.yaml
+++ b/data/cards/yugipedia928313.yaml
@@ -7,8 +7,8 @@ name:
   fr:
   it:
   pt:
-  ja: ウサミミ導師
-  ja_romaji:
+  ja: ウサミミ<ruby>導<rt>どう</rt></ruby><ruby>師<rt>し</rt></ruby>
+  ja_romaji: Usamimi Dōshi
   ko:
   ko_rr:
   zh-TW:
