--- a/data/rush/18653.yaml
+++ b/data/rush/18653.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 18653
 name:
   en: Level Blast
   de:
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    お互いのフィールドにそれぞれ表側表示モンスター（レベル７以上）がいる場合に発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分フィールドの表側表示モンスター１体を選び、［選んだモンスターのレベル］×１００ダメージを相手に与える。このターン、自分はモンスター１体でしか攻撃できない。
   ko:
   zh-TW:
   zh-CN:
