--- a/data/cards/03113836.yaml
+++ b/data/cards/03113836.yaml
@@ -36,8 +36,8 @@ text:
     「ジェムナイト」モンスター＋光属性モンスター
     このカードは上記カードを融合素材にした融合召喚でのみＥＸデッキから特殊召喚できる。①：このカードがモンスターゾーンに存在する限り、自分は通常召喚に加えて１度だけ、自分メインフェイズにモンスター１体を通常召喚できる。
   ko: |-
-    "젬나이트"라는 이름이 붙은 몬스터 + 빛 속성 몬스터
-    이 카드는 상기의 카드를 융합 소재로 한 융합 소환으로만 엑스트라 덱에서 특수 소환할 수 있다. 이 카드가 필드 위에 앞면 표시로 존재하는 한, 자신의 메인 페이즈시에 1번만, 자신은 일반 소환 / 세트 외에도 몬스터 1장을 일반 소환 / 세트할 수 있다.
+    "젬나이트" 몬스터 ＋ 빛 속성 몬스터
+    이 카드는 상기 카드를 융합 소재로 한 융합 소환으로만 엑스트라 덱에서 특수 소환할 수 있다. ①: 이 카드가 몬스터 존에 존재하는 한, 자신은 통상 소환 외에도 1번만, 자신 메인 페이즈에 몬스터 1장을 통상 소환할 수 있다.
   zh-TW:
   zh-CN: |-
     「宝石骑士」怪兽＋光属性怪兽
