--- a/data/cards/69933858.yaml
+++ b/data/cards/69933858.yaml
@@ -8,7 +8,7 @@ name:
   it: Gilford la Leggenda
   pt: Gilford, a Lenda
   ja: ギルフォード・ザ・レジェンド
-  ja_romaji: Girufōdo za Rejendo
+  ja_romaji: Girufōdo Za Rejendo
   ko: 전설의 길포드
   ko_rr:
   zh-TW:
