--- a/data/cards/25862681.yaml
+++ b/data/cards/25862681.yaml
@@ -33,8 +33,8 @@ text:
     1 Regulador + 1+ monstros não-Reguladores
     Uma vez por turno: você pode Invocar por Invocação-Especial 1 monstro de Nível 4 ou menos da sua mão. Você não pode conduzir sua Fase de Batalha no turno em que ativar este efeito. Uma vez por turno: você pode destruir tantas Magias de Campo no campo quanto possível e, se isso acontecer, ganhe 1000 PV e, depois, você pode adicionar 1 Magia de Campo do seu Deck à sua mão.
   ja: |-
-    チューナー＋チューナー<ruby>以<rt>い</rt></ruby><ruby>外<rt>がい</rt></ruby>のモンスター１<ruby>体<rt>たい</rt></ruby><ruby>以<rt>い</rt></ruby><ruby>上<rt>じょう</rt></ruby>
-    １ターンに１<ruby>度<rt>ど</rt></ruby>、<ruby>手<rt>て</rt></ruby><ruby>札<rt>ふだ</rt></ruby>からレベル４<ruby>以<rt>い</rt></ruby><ruby>下<rt>か</rt></ruby>のモンスター１<ruby>体<rt>たい</rt></ruby>を<ruby>特<rt>とく</rt></ruby><ruby>殊<rt>しゅ</rt></ruby><ruby>召<rt>しょう</rt></ruby><ruby>喚<rt>かん</rt></ruby>できる。この<ruby>効<rt>こう</rt></ruby><ruby>果<rt>か</rt></ruby>を<ruby>発<rt>はつ</rt></ruby><ruby>動<rt>どう</rt></ruby>するターン、<ruby>自<rt>じ</rt></ruby><ruby>分<rt>ぶん</rt></ruby>はバトルフェイズを<ruby>行<rt>おこな</rt></ruby>えない。また、１ターンに１<ruby>度<rt>ど</rt></ruby>、<ruby>自<rt>じ</rt></ruby><ruby>分<rt>ぶん</rt></ruby>のメインフェイズ<ruby>時<rt>とき</rt></ruby>に<ruby>発<rt>はつ</rt></ruby><ruby>動<rt>どう</rt></ruby>できる。フィールド<ruby>上<rt>じょう</rt></ruby>のフィールド<ruby>魔<rt>ま</rt></ruby><ruby>法<rt>ほう</rt></ruby>カードを<ruby>全<rt>すべ</rt></ruby>て<ruby>破<rt>は</rt></ruby><ruby>壊<rt>かい</rt></ruby>し、<ruby>自<rt>じ</rt></ruby><ruby>分<rt>ぶん</rt></ruby>は１０００ライフポイント<ruby>回<rt>かい</rt></ruby><ruby>復<rt>ふく</rt></ruby>する。その<ruby>後<rt>あと</rt></ruby>、デッキからフィールド<ruby>魔<rt>ま</rt></ruby><ruby>法<rt>ほう</rt></ruby>カード１枚を<ruby>手<rt>て</rt></ruby><ruby>札<rt>ふだ</rt></ruby>に<ruby>加<rt>くわ</rt></ruby>える<ruby>事<rt>こと</rt></ruby>ができる。
+    チューナー＋チューナー以外のモンスター１体以上
+    このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：自分メインフェイズに発動できる。手札からレベル４以下のモンスター１体を特殊召喚する。この効果を発動するターン、自分はバトルフェイズを行えない。②：自分メインフェイズに発動できる。フィールドゾーンのカードを全て破壊し、自分は１０００ＬＰ回復する。その後、破壊したカードとはカード名が異なるフィールド魔法カード１枚をデッキから手札に加える事ができる。
   ko: |-
     튜너 + 튜너 이외의 몬스터 1장 이상
     1턴에 1번, 패에서 레벨 4 이하의 몬스터 1장을 특수 소환할 수 있다. 이 효과를 발동하는 턴에, 자신은 배틀 페이즈를 실행할 수 없다. 또한, 1턴에 1번, 필드 마법 카드를 파괴할 수 있다. 파괴했을 경우 자신은 1000 라이프 포인트 회복한다. 또한, 자신의 덱에서 필드 마법 카드 1장을 패에 넣을 수 있다.
