--- a/data/cards/yugipedia928313.yaml
+++ b/data/cards/yugipedia928313.yaml
@@ -8,7 +8,7 @@ name:
   it:
   pt:
   ja: ウサミミ<ruby>導<rt>どう</rt></ruby><ruby>師<rt>し</rt></ruby>
-  ja_romaji: Usamimi Dōshi
+  ja_romaji: Usamimi-dōshi
   ko:
   ko_rr:
   zh-TW:
