--- a/data/cards/14235211.yaml
+++ b/data/cards/14235211.yaml
@@ -33,7 +33,7 @@ text:
   zh-TW: |-
     在我方主要阶段时，可以让手牌或是我方场上存在的此怪兽作为装备卡，装备我方场上龙族的1只通常怪兽。若是将此卡当作装备卡的情形，当装备怪兽攻击守备表示怪兽时，其攻击力若超过守备表示怪兽的守备力，将给对手生命造成相差数值的战斗伤害。此外，若是装备此卡的怪兽被破坏的情形，将破坏此卡做为代替。
   zh-CN: |-
-    ①：以自己场上的1只龙族通常怪兽作为对象可以发动。从自己的手牌·场上将此怪兽视为装备卡，将其装备给自己的龙族通常怪兽。 ②：装备怪兽攻击守备表示怪兽的情况下，将给对手造成攻击力超出其守备力部分数值的战斗伤害。 ③：装备怪兽将被破坏的情况下，作为代替破坏此卡。
+    ①：以自己场上的1只龙族通常怪兽作为对象可以发动。从自己的手牌・场上将此怪兽视为装备卡，将其装备给自己的龙族通常怪兽。②：装备怪兽攻击守备表示怪兽的情况下，将给对手造成攻击力超出其守备力部分数值的战斗伤害。③：装备怪兽将被破坏的情况下，作为代替破坏此卡。
 card_type: Monster
 monster_type_line: Dragon / Tuner / Effect
 attribute: LIGHT
