--- a/data/cards/26593852.yaml
+++ b/data/cards/26593852.yaml
@@ -42,6 +42,7 @@ text:
     協調＋協調以外的怪獸1隻或以上
     此卡與以表側表示存在於場上的暗屬性以外的怪獸戰鬥的場合，無須進行傷害計算破壞該怪獸。
   zh-CN: |-
+    协调+1只以上协调以外的怪兽
     ①：此卡与暗属性以外的表侧表示怪兽进行战斗的伤害步骤开始时发动。将该怪兽破坏。
 card_type: Monster
 monster_type_line: Machine / Synchro / Effect
