--- a/data/cards/28596933.yaml
+++ b/data/cards/28596933.yaml
@@ -33,7 +33,7 @@ text:
   zh-TW: |-
     选择我方场上1只等级5以上的龙族怪兽返回至持有者手牌，破坏场上全部的魔法、陷阱卡。
   zh-CN: |-
-    ①：挑选自己场上的1只等级5以上的龙族怪兽放回持有者手牌，将场上的魔法·陷阱卡全部破坏。
+    ①：挑选自己场上的1只等级5以上的龙族怪兽放回持有者手牌，将场上的魔法・陷阱卡全部破坏。
 card_type: Spell
 property: Normal
 images:
