--- a/data/cards/41517789.yaml
+++ b/data/cards/41517789.yaml
@@ -40,8 +40,8 @@ text:
     이 카드는 싱크로 소환으로밖에 특수 소환할 수 없다. 이 카드의 싱크로 소환은 무효화되지 않고, 이 카드가 싱크로 소환에 성공했을 때, 마법 / 함정 / 효과 몬스터의 효과를 발동할 수 없다. 이 카드가 공격할 경우, 이 카드는 데미지 스텝 종료시까지, 이 카드 이외의 카드의 효과를 받지 않는다.
   zh-TW:
   zh-CN: |-
-    协调＋协调以外的怪兽1只以上
-    此卡只可以同步召唤方式特殊召唤。①：此卡的同步召唤不会被无效化。②：此卡同步召唤成功时，不可以发动魔法·陷阱·怪兽的效果。③：此卡攻击的情况下，直至伤害步骤结束时为止不受其他卡的效果影响。
+    协调+1只以上协调以外的怪兽
+    此卡只可以同步召唤方式特殊召唤。①：此卡的同步召唤不会被无效化。②：此卡同步召唤成功时，不可以发动魔法・陷阱・怪兽的效果。③：此卡攻击的情况下，直至伤害步骤结束时为止不受其他卡的效果影响。
 card_type: Monster
 monster_type_line: Dragon / Synchro / Effect
 attribute: LIGHT
