--- a/data/cards/41620959.yaml
+++ b/data/cards/41620959.yaml
@@ -33,7 +33,7 @@ text:
   zh-TW: |-
     从牌组将1只龙族怪兽送入墓地。若送入墓地的是龙族的通常怪兽，则可以再从牌组将1只龙族怪兽送入墓地。1个回合只能发动1张「龍之靈廟」。
   zh-CN: |-
-    此卡名的卡1回合仅可发动1张。①：从牌组将1只龙族怪兽送至墓地。以此效果被送至墓地的怪兽是龙族通常怪兽的情况下，进而可从牌组将1只龙族怪兽送至墓地。
+    此卡名的卡1回合仅可发动1张。①：从牌组将1只龙族怪兽送至墓地。以此效果送至墓地的怪兽是龙族的通常怪兽的情况下，可以进而再从牌组将1只龙族怪兽送至墓地。
 card_type: Spell
 property: Normal
 images:
