--- a/data/cards/82382815.yaml
+++ b/data/cards/82382815.yaml
@@ -33,7 +33,9 @@ text:
   zh-TW: |-
     若我方场上存在等级7以上通常怪兽的情形可以发动。使魔法/陷阱卡的发动、怪兽的召唤/反转召唤/特殊召唤中的其中1项无效并破坏。
   zh-CN: |-
-    ①：自己场上存在等级7以上的通常怪兽的情况下，可以发动以下效果。●发动魔法·陷阱卡时可以发动。将该发动无效并将其破坏。●自己或者是对手将召唤·反转召唤·特殊召唤怪兽之际可以发动。将其无效，并将该怪兽破坏。
+    ①：自己场上存在等级7以上的通常怪兽的情况下，可以发动以下效果。
+    ●发动魔法・陷阱卡时可以发动。将该发动无效并将其破坏。
+    ●自己或者是对手将召唤・反转召唤・特殊召唤怪兽之际可以发动。将其无效，并将该怪兽破坏。
 card_type: Trap
 property: Counter
 images:
