--- a/data/cards/01315120.yaml
+++ b/data/cards/01315120.yaml
@@ -32,7 +32,7 @@ text:
     상대 필드 위에 몬스터가 존재하고, 자신 필드 위에 몬스터가 존재하지 않을 경우, 이 카드는 패에서 특수 소환할 수 있다. 필드 위에 존재하는 이 카드가 파괴되어 묘지로 보내진 턴의 엔드 페이즈시, 자신의 덱에서 "TG(테크지너스) 스트라이커" 이외의 "TG(테크지너스)"라는 이름이 붙은 몬스터 1장을 패에 넣을 수 있다.
   zh-TW:
   zh-CN: |-
-    ①：在仅有对手场上存在怪兽的情况下，此卡可从手牌中特殊召唤。②：场上的此卡被破坏送至墓地的回合的结束阶段可以发动。从牌组将1只“T.G.突击兵”以外的“T.G.”怪兽加入手牌。
+    ①：在仅有对手场上存在怪兽的情况下，此卡可从手牌中特殊召唤。②：场上的此卡被破坏送至墓地的回合的结束阶段可以发动。从牌组将1只"T.G.突击兵"以外的"T.G."怪兽加入手牌。
 card_type: Monster
 monster_type_line: Warrior / Tuner / Effect
 attribute: EARTH
