--- a/data/cards/13513663.yaml
+++ b/data/cards/13513663.yaml
@@ -33,7 +33,7 @@ text:
   zh-TW: |-
     1个回合1次，可将1只我方墓地的龙族怪兽从游戏中除外并选择1只我方场上的怪兽进行发动。被选择的怪兽到结束阶段为止攻击力提升700点。此外，当以表侧表示存在于场上的此卡被送入墓地时，可以选择我方从游戏中除外的1只龙族怪兽进行特殊召唤。「龍魂之城」只可以有1张以表侧表示存在于我方场上。
   zh-CN: |-
-    ①：“龙魂之城”在自己场上只可有1张以表侧表示形式存在。②：1回合1次，将自己墓地的1只龙族怪兽除外，可以自己场上的1只表侧表示的怪兽为对象发动。该怪兽的攻击力直至回合结束时为止上升700。③：表侧表示的此卡从场上被送至墓地时，可以1只被除外的自己的龙族怪兽为对象发动。将该怪兽特殊召唤。
+    ①："龙魂之城"在自己场上只可有1张以表侧表示形式存在。②：1回合1次，将自己墓地的1只龙族怪兽除外，可以自己场上的1只表侧表示的怪兽为对象发动。该怪兽的攻击力直至回合结束时为止上升700。③：表侧表示的此卡从场上被送至墓地时，可以1只被除外的自己的龙族怪兽为对象发动。将该怪兽特殊召唤。
 card_type: Trap
 property: Continuous
 images:
