--- a/data/cards/34627841.yaml
+++ b/data/cards/34627841.yaml
@@ -33,7 +33,7 @@ text:
   zh-TW: |-
     可以释放此卡进行发动。从手牌特殊召唤1只「青眼白龍」。
   zh-CN: |-
-    ①：解放此卡可以发动。从手牌将1只“青眼白龙”特殊召唤。
+    ①：解放此卡可以发动。从手牌将1只"青眼白龙"特殊召唤。
 card_type: Monster
 monster_type_line: Warrior / Effect
 attribute: LIGHT
