--- a/data/cards/50321796.yaml
+++ b/data/cards/50321796.yaml
@@ -40,7 +40,7 @@ text:
     이 카드명의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 패를 임의의 매수 묘지로 버리고, 버린 수만큼 상대 필드의 카드를 대상으로 하여 발동할 수 있다. 그 카드를 주인의 패로 되돌린다.
   zh-TW:
   zh-CN: |-
-    协调＋协调以外的怪兽1只以上
+    协调+1只以上协调以外的怪兽
     此卡名的效果1回合仅可使用1次。①：将任意张数的手牌扔掉至墓地，可以相当于扔掉张数的对手场上的卡为对象发动。将该卡放回持有者的手牌中。
 card_type: Monster
 monster_type_line: Sea Serpent / Synchro / Effect
