--- a/data/cards/57662975.yaml
+++ b/data/cards/57662975.yaml
@@ -42,8 +42,8 @@ text:
     若是此卡在墓地或以表侧表示存在于场上的情形，将被作为通常怪兽。透过再次召唤作为通常召唤以表侧表示存在于场上的此卡，将此卡变为效果怪兽并得到以下效果。
     ●1个回合1次，可以将以表侧表示存在于我方场上的1张魔法、陷阱卡送入墓地进行发动。将场上的魔法、陷阱卡全部破坏。
   zh-CN: |-
-    ①：只要此卡存在于场上·墓地，就视为通常怪兽。 ②：场上的视为通常怪兽的此卡可作为通常召唤再进行1次召唤。该情况下此卡视为效果怪兽，获得以下效果。
-    ●1回合1次，将自己场上的1张表侧表示的魔法·陷阱卡送至墓地可以发动。将场上的魔法·陷阱卡全部破坏。
+    ①：只要此卡存在于场上・墓地，就视为通常怪兽。②：场上的视为通常怪兽的此卡可作为通常召唤再进行1次召唤。该情况下此卡视为效果怪兽，获得以下效果。
+    ●1回合1次，将自己场上的1张表侧表示的魔法・陷阱卡送至墓地可以发动。将场上的魔法・陷阱卡全部破坏。
 card_type: Monster
 monster_type_line: Dragon / Gemini / Effect
 attribute: DARK
