--- a/data/cards/59822133.yaml
+++ b/data/cards/59822133.yaml
@@ -40,8 +40,8 @@ text:
     ①: 이 카드가 몬스터 존에 존재하는 한, 서로 2장 이상의 몬스터를 동시에 특수 소환할 수 없다. ②: 1턴에 1번, 묘지의 카드의 효과가 발동했을 때에 발동할 수 있다. 그 발동을 무효로 한다. ③: 싱크로 소환한 이 카드를 릴리스하고 발동할 수 있다. 엑스트라 덱에서 "푸른 눈의 정령룡" 이외의 드래곤족 / 빛 속성의 싱크로 몬스터 1장을 수비 표시로 특수 소환한다. 그 몬스터는 이 턴의 엔드 페이즈에 파괴된다. 이 효과는 상대 턴에도 발동할 수 있다.
   zh-TW:
   zh-CN: |-
-    协调＋协调以外的“青眼”怪兽1只以上
-    ①：只要此卡存在于怪兽区域，双方不可将2只以上的怪兽同时特殊召唤。②：1回合1次，墓地的卡的效果发动时可以发动。将该发动无效。③：解放同步召唤的此卡可以发动。从额外牌组将“青眼精灵龙”以外的1只龙族·光属性的同步怪兽以守备表示特殊召唤。在此回合的结束阶段该怪兽将被破坏。此效果在对手回合中也可以发动。
+    协调＋协调以外的"青眼"怪兽1只以上
+    ①：只要此卡存在于怪兽区域，双方不可将2只以上的怪兽同时特殊召唤。②：1回合1次，墓地的卡的效果发动时可以发动。将该发动无效。③：解放同步召唤的此卡可以发动。从额外牌组将"青眼精灵龙"以外的1只龙族・光属性的同步怪兽以守备表示特殊召唤。在此回合的结束阶段该怪兽将被破坏。此效果在对手回合中也可以发动。
 card_type: Monster
 monster_type_line: Dragon / Synchro / Effect
 attribute: LIGHT
