--- a/data/cards/62265044.yaml
+++ b/data/cards/62265044.yaml
@@ -51,8 +51,8 @@ text:
     ●从牌组将1只等级4以下并带有「龍盟」之名的怪兽加入手牌。
     ●从牌组将1只龙族怪兽送入墓地。
   zh-CN: |-
-    ①：1回合1次，扔掉1张手牌，可从以下效果中选择1个发动。
-    ●从牌组将1只等级4以下的“龙骑兵团”怪兽加入手牌。
+    ①：1回合1次，扔掉1张手牌，可从以下效果选择1个发动。
+    ●从牌组将1只等级4以下的"龙骑兵团"怪兽加入手牌。
     ●从牌组将1只龙族怪兽送至墓地。
 card_type: Spell
 property: Field
