--- a/data/cards/66698383.yaml
+++ b/data/cards/66698383.yaml
@@ -40,8 +40,8 @@ text:
     ①: 1턴에 1번, 자신의 패 / 묘지 및 자신 필드의 앞면 표시 몬스터 중에서 튜너 1장을 제외하고, 필드의 카드 1장을 대상으로 하여 발동할 수 있다. 그 카드를 파괴한다. ②: 싱크로 소환한 이 카드가 효과로 파괴되어 묘지로 보내졌을 경우, 제외되어 있는 자신의 튜너 1장을 대상으로 하고 발동할 수 있다. 그 몬스터를 패에 넣는다.
   zh-TW:
   zh-CN: |-
-    协调＋协调以外的怪兽1只以上
-    ①：1回合1次，从自己的手牌·墓地及自己场上的表侧表示怪兽中将1只协调除外，可以场上的1张卡为对象发动。将该卡破坏。②：同步召唤的此卡被效果破坏送至墓地的情况下，可以被除外的自己的1只协调为对象发动。将该怪兽加入手牌。
+    协调+1只以上协调以外的怪兽
+    ①：1回合1次，从自己的手牌・墓地及自己场上的表侧表示怪兽中将1只协调除外，可以场上的1张卡为对象发动。将该卡破坏。②：同步召唤的此卡被效果破坏送至墓地的情况下，可以被除外的自己的1只协调为对象发动。将该怪兽加入手牌。
 card_type: Monster
 monster_type_line: Machine / Synchro / Effect
 attribute: FIRE
