--- a/data/cards/71039903.yaml
+++ b/data/cards/71039903.yaml
@@ -32,7 +32,7 @@ text:
     "태고의 백석"의 ②의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 이 카드가 묘지로 보내진 턴의 엔드 페이즈에 발동할 수 있다. 덱에서 "푸른 눈" 몬스터 1장을 특수 소환한다. ②: 묘지의 이 카드를 제외하고, 자신 묘지의 "푸른 눈" 몬스터 1장을 대상으로 하여 발동할 수 있다. 그 몬스터를 패에 넣는다.
   zh-TW:
   zh-CN: |-
-    此卡名的②效果1回合仅可使用1次。①：在此卡被送至墓地的回合的结束阶段可以发动。从牌组将1只“青眼”怪兽特殊召唤。②：将墓地中的此卡除外，可以自己墓地的1只“青眼”怪兽为对象发动。将该怪兽加入手牌。
+    此卡名的②效果1回合仅可使用1次。①：在此卡被送至墓地的回合的结束阶段可以发动。从牌组将1只"青眼"怪兽特殊召唤。②：将墓地中的此卡除外，可以自己墓地的1只"青眼"怪兽为对象发动。将该怪兽加入手牌。
 card_type: Monster
 monster_type_line: Dragon / Tuner / Effect
 attribute: LIGHT
