--- a/data/cards/79814787.yaml
+++ b/data/cards/79814787.yaml
@@ -33,7 +33,7 @@ text:
   zh-TW: |-
     当此卡被送入墓地时，从牌组将1只「青眼白龍」加入手牌。
   zh-CN: |-
-    ①：此卡被送至墓地的情况下发动。从牌组将1只“青眼白龙”加入手牌。
+    ①：此卡被送至墓地的情况下发动。从牌组将1只"青眼白龙"加入手牌。
 card_type: Monster
 monster_type_line: Dragon / Tuner / Effect
 attribute: LIGHT
