--- a/data/cards/83994433.yaml
+++ b/data/cards/83994433.yaml
@@ -40,8 +40,8 @@ text:
     ①: 1턴에 1번, 자신 필드의 앞면 표시의 카드 1장을 대상으로 하고 발동할 수 있다. 그 카드는 이 턴에 1번만 전투 / 효과로는 파괴되지 않는다. 이 효과는 상대 턴에도 발동할 수 있다.
   zh-TW:
   zh-CN: |-
-    协调＋协调以外的怪兽1只以上
-    ①：1回合1次，可以自己场上的表侧表示的1张卡为对象发动。该卡在此回合中仅1次不会因战斗·效果被破坏。此效果在对手回合中也可以发动。
+    协调+1只以上协调以外的怪兽
+    ①：1回合1次，可以自己场上的表侧表示的1张卡为对象发动。该卡在此回合中仅1次不会因战斗・效果被破坏。此效果在对手回合中也可以发动。
 card_type: Monster
 monster_type_line: Dragon / Synchro / Effect
 attribute: LIGHT
