--- a/data/cards/98045062.yaml
+++ b/data/cards/98045062.yaml
@@ -52,8 +52,8 @@ text:
     ●可以释放我方场上的1只怪兽进行发动。选择以表侧表示存在于对手场上的1只怪兽，到结束阶段为止获得控制权。
   zh-CN: |-
     ①：可从以下效果中选择1个发动。
-    ●可以对手场上的1只表侧表示的怪兽为对象发动。改变该对手的表侧表示怪兽的表示形式。
-    ●解放自己场上的1只怪兽，可以对手场上的1只表侧表示的怪兽为对象发动。直至结束阶段为止获得该表侧表示怪兽的控制权。
+    ●以对手场上的1只表侧表示的怪兽为对象可以发动。改变该对手的表侧表示怪兽的表示形式。
+    ●解放自己场上的1只怪兽，以对手场上的1只表侧表示的怪兽为对象可以发动。直至结束阶段为止获得该表侧表示怪兽的控制权。
 card_type: Spell
 property: Quick-Play
 images:
