--- a/rush.yaml
+++ b/rush.yaml
@@ -69,6 +69,7 @@ images:
   image: SevensRoadMagician-RDMRP1-JP-R.png
 - index: 5
   image: SevensRoadMagician-RDORP1-JP-ORR.png
+  illustration: SevensRoadMagician-OW-2.png
 sets:
   ja:
   - set_number: RD/ST01-JP001
@@ -82649,6 +82650,7 @@ images:
   image: ExcutieLumiere-RDORP1-JP-SR.png
 - index: 2
   image: ExcutieLumiere-RDJF23-JP-OP.png
+  illustration: ExcutieLumiere-OW.png
 sets:
   ja:
   - set_number: RD/ORP1-JP031
