--- a/data/cards/yugipedia928501.yaml
+++ b/data/cards/yugipedia928501.yaml
@@ -7,8 +7,8 @@ name:
   fr:
   it:
   pt:
-  ja: 赫聖の相剣
-  ja_romaji:
+  ja: <ruby>赫<rt>かく</rt></ruby><ruby>聖<rt>せい</rt></ruby>の<ruby>相<rt>そう</rt></ruby><ruby>剣<rt>けん</rt></ruby>
+  ja_romaji: Kakusei no Sōken
   ko:
   ko_rr:
   zh-TW:
