--- a/data/cards/yugipedia928502.yaml
+++ b/data/cards/yugipedia928502.yaml
@@ -7,8 +7,8 @@ name:
   fr:
   it:
   pt:
-  ja: 赫ける王の烙印
-  ja_romaji:
+  ja: <ruby>赫<rt>かがや</rt></ruby>ける<ruby>王<rt>おう</rt></ruby>の<ruby>烙<rt>らく</rt></ruby><ruby>印<rt>いん</rt></ruby>
+  ja_romaji: Kagayakeru Ō no Rakuin
   ko:
   ko_rr:
   zh-TW:
