--- a/data/rush/16898.yaml
+++ b/data/rush/16898.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    When your opponent Normal or Special Summons a monster, and you have a LIGHT Attribute Normal Monster with 500 DEF in your Graveyard.
+    When your opponent Normal or Special Summons a monster while you have a LIGHT Attribute Normal Monster with 500 DEF in your Graveyard.
   de:
   es:
   fr:
