--- a/data/cards/yugipedia928519.yaml
+++ b/data/cards/yugipedia928519.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    Once per turn: You can reveal 1 "Gunkan Suship Shari" in your hand; place 1 counter on this card, and if you do, reveal 1 "Gunkan" Xyz Monster in your Extra Deck, and if you do that, your opponent declares 1 "Gunkan" monster's name mentioned on a "Gunkan" Xyz Monster, except "Gunkan Suship Shari", and you add the declared card from your Deck to your hand. If you cannot add the declared card, shuffle this card into the Deck. If this card in its owner's possession is destroyed by an opponent's card: Your opponent pays LP exactly equal to the number of counters this card had x 500.
+    Once per turn: You can reveal 1 "Gunkan Suship Shari" in your hand; place 1 counter on this card, and if you do, reveal 1 "Gunkan" Xyz Monster in your Extra Deck, and if you do that, your opponent declares 1 "Gunkan" monster's name mentioned on any "Gunkan" Xyz Monster, except "Gunkan Suship Shari", and you add the declared card from your Deck to your hand. If you cannot add the declared card, shuffle this card into the Deck. If this card in its owner's possession is destroyed by an opponent's card: Your opponent pays LP exactly equal to the number of counters this card had x 500.
   de:
   es:
   fr:
