--- a/data/cards/44095762.yaml
+++ b/data/cards/44095762.yaml
@@ -12,7 +12,7 @@ name:
   ko: 성스러운 방어막 거울의 힘
   ko_rr: Seongseureoun Bang-eomak Geoul-ui Him
   zh-TW: 神聖防護罩－反射鏡力－
-  zh-CN: 神圣防护罩 －反射镜力－
+  zh-CN: 神圣防护罩－反射镜力－
 text:
   en: |-
     When an opponent's monster declares an attack: Destroy all your opponent's Attack Position monsters.
@@ -33,7 +33,7 @@ text:
   zh-TW: |-
     对手怪兽的攻击宣言时可发动。破坏全部以攻击表示存在于对手场上的怪兽。
   zh-CN: |-
-    ①：对手怪兽攻击宣言时可以发动。将对手场上的攻击表示的怪兽全部破坏。
+    ①：对手怪兽攻击宣言时可以发动。将对手场上攻击表示的怪兽全部破坏。
 card_type: Trap
 property: Normal
 series:
