--- a/data/cards/48800175.yaml
+++ b/data/cards/48800175.yaml
@@ -33,7 +33,7 @@ text:
   zh-TW: |-
     可丟棄1張手牌來進行發動。從牌組中抽取最多2張攻擊力3000點以上、守備力2500點以下的龍族怪獸卡加入手牌。
   zh-CN: |-
-    ①：扔掉1张手牌可以发动。将最多2只攻击力3000以上，守备力2500以下的龙族怪兽从牌组加入手牌。
+    ①：扔掉1张手牌可以发动。将最多2只攻击力3000以上、守备力2500以下的龙族怪兽从牌组加入手牌。
 card_type: Spell
 property: Normal
 images:
