--- a/data/cards/55878038.yaml
+++ b/data/cards/55878038.yaml
@@ -57,7 +57,9 @@ text:
   zh-TW:
   zh-CN: |-
     此卡不可通常召唤。从自己的墓地将光・暗属性怪兽共计3只除外的情况下可以特殊召唤。此卡名的效果1回合仅可使用1次。①：以此方法将此卡特殊召唤成功时可以发动。根据为该特殊召唤而除外的怪兽的属性适用以下效果。此回合此卡不可攻击。
-    ●仅有光：从自己墓地挑选1只怪兽以守备表示特殊召唤。●仅有暗：从对手手牌随机挑选1张放回牌组。●光与暗：挑选场上最多2张卡破坏。
+    ●仅有光：从自己墓地挑选1只怪兽以守备表示特殊召唤。
+    ●仅有暗：从对手手牌随机挑选1张放回牌组。
+    ●光与暗：挑选场上最多2张卡破坏。
 card_type: Monster
 monster_type_line: Dragon / Effect
 attribute: DARK
