--- a/data/cards/67169062.yaml
+++ b/data/cards/67169062.yaml
@@ -33,7 +33,7 @@ text:
   zh-TW: |-
     可选择我方墓地的5只怪兽发动。所选择的5只怪兽加入牌组并洗牌。之后，从牌组抽取2张卡牌。
   zh-CN: |-
-    ①：以自己墓地的5只怪兽为对象可以发动。将该5只怪兽加入牌组进行洗牌。然后，自己从牌组中抽2张。
+    ①：以自己墓地的5只怪兽为对象可以发动。将该5只怪兽放回牌组进行洗牌。然后，自己从牌组抽2张。
 card_type: Spell
 property: Normal
 series:
