--- a/data/cards/77558536.yaml
+++ b/data/cards/77558536.yaml
@@ -32,7 +32,7 @@ text:
     이 카드명의 ①의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 자신 메인 페이즈에 발동할 수 있다. 자신의 덱 위에서 카드를 2장 묘지로 보낸다. 이 효과로 묘지로 보낸 카드 중에 "라이트로드" 몬스터가 있을 경우, 추가로 이 카드의 공격력은 상대 턴 종료시까지 200 올린다. ②: 자신 엔드 페이즈에 발동한다. 자신의 덱 위에서 카드를 2장 묘지로 보낸다.
   zh-TW:
   zh-CN: |-
-    此卡名的①的效果1回合仅可使用1次。①：在自己的主要阶段可以发动。从自己牌组上面把2张卡送至墓地。以此效果送至墓地的卡中存在“光道”怪兽的情况下，此卡的攻击力直到对手回合结束时为止上升200点。②：在自己的结束阶段发动。从自己牌组上面将2张卡送至墓地。
+    此卡名的①效果1回合仅可使用1次。①：在自己的主要阶段可以发动。从自己的牌组上面将2张卡送至墓地。以此效果送至墓地的卡中有"光道"怪兽的情况下，此卡的攻击力直至对手回合结束时为止进而上升200。②：在自己的结束阶段发动。从自己牌组上面将2张卡送至墓地。
 card_type: Monster
 monster_type_line: Warrior / Tuner / Effect
 attribute: LIGHT
