--- a/data/cards/88264978.yaml
+++ b/data/cards/88264978.yaml
@@ -33,7 +33,7 @@ text:
   zh-TW: |-
     此卡可將我方場上以表側表示存在的1隻龍族怪獸從遊戲中除外，並從手牌特殊召喚。1回合1次，於我方主要階段時可從我方手牌、墓地中挑選1隻「真紅眼暗鐵龍」以外的龍族怪獸特殊召喚。
   zh-CN: |-
-    此卡名以①方法的特殊召唤1回合仅可进行1次，且②效果1回合仅可使用1次。①：将自己场上的1只表侧表示的龙族怪兽除外，可从手牌特殊召唤此卡。②：在自己的主要阶段可以发动。从自己的手牌・墓地挑选1只“真红眼暗铁龙”以外的龙族怪兽特殊召唤。
+    此卡名以①方法的特殊召唤1回合仅可进行1次，且②效果1回合仅可使用1次。①：将自己场上的1只表侧表示的龙族怪兽除外，可从手牌特殊召唤此卡。②：在自己的主要阶段可以发动。从自己的手牌・墓地挑选1只"真红眼暗铁龙"以外的龙族怪兽特殊召唤。
 card_type: Monster
 monster_type_line: Dragon / Effect
 attribute: DARK
@@ -331,6 +331,6 @@ sets:
     - Secret Rare
     - Collector's Rare
 limit_regulation:
-  tcg: Limited
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 74297
