--- a/data/cards/04722253.yaml
+++ b/data/cards/04722253.yaml
@@ -28,6 +28,10 @@ text:
     Não pode ser Invocado por Invocação-Normal/Baixado. Você deve Invocá-lo por Invocação-Especial (da sua mão) ao ter 5 ou mais monstros de LUZ com nomes diferentes no seu Cemitério e não pode ser Invocá-lo por Invocação-Especial de nenhuma outra forma. Uma vez por turno, durante o turno de qualquer duelista, quando um Card de Magia/Armadilha for ativado: você pode banir 1 monstro do Tipo Guerreiro do seu Cemitério; negue a ativação e, se isso acontecer, destrua-o. Todos os monstros com a face para cima que você controla devem ser do Tipo Guerreiro para que você possa ativar e resolver este efeito.
   ja: |-
     このカードは通常召喚できない。自分の墓地の光属性モンスターが５種類以上の場合のみ特殊召喚できる。自分フィールド上に表側表示で存在するモンスターが戦士族のみの場合、自分の墓地の戦士族モンスター１体をゲームから除外する事で、魔法・罠カードの発動を無効にし破壊する。この効果は１ターンに１度しか使用できない。
+
+
+
+    效果：此卡不能通常召唤。自己墓地中有5种以上的光属性怪兽时才可以特殊召唤上场。自己场上正面表示的怪兽都是战士族怪兽时，可以将自己墓地中一只战士族怪兽除外，然后使魔法·陷阱卡的发动无效，并破坏那张卡。此效果1回合只能使用1次。
   ko: |-
     이 카드는 일반 소환 / 세트할 수 없다. 자신 묘지의 빛 속성 몬스터가 5종류 이상일 경우에만 특수 소환할 수 있다. 자신 필드 위에 앞면 표시로 존재하는 몬스터가 전사족뿐일 경우, 자신 묘지의 전사족 몬스터 1장을 게임에서 제외하는 것으로, 마법 / 함정 카드의 발동을 무효로 하고 파괴한다. 이 효과는 1턴에 1번밖에 사용할 수 없다.
   zh-TW:
