--- a/data/cards/04906301.yaml
+++ b/data/cards/04906301.yaml
@@ -33,7 +33,7 @@ text:
   zh-TW: |-
     對手回合中，可將墓地中的此卡從遊戲中除外進行發動。此回合，只有1次可將對手怪獸的攻擊無效化。
   zh-CN: |-
-    ①：对手回合中将墓地的此卡除外可以发动。此回合，将对手怪兽的攻击无效1次。
+    ①：对手回合中将墓地中的此卡除外可以发动。此回合，将对手怪兽的攻击无效1次。
 card_type: Monster
 monster_type_line: Warrior / Effect
 attribute: DARK
