--- a/data/cards/05560911.yaml
+++ b/data/cards/05560911.yaml
@@ -180,6 +180,6 @@ sets:
     - Secret Rare
     - Collector's Rare
 limit_regulation:
-  tcg: Forbidden
+  tcg: Limited
   ocg: Unlimited
 yugipedia_page_id: 519632
