--- a/data/cards/05650082.yaml
+++ b/data/cards/05650082.yaml
@@ -32,7 +32,7 @@ text:
     ①: 상대 몬스터의 공격 선언시에 발동할 수 있다. 상대 필드의 공격 표시 몬스터를 전부 주인의 패로 되돌린다.
   zh-TW:
   zh-CN: |-
-    ①：对手怪兽攻击宣言时可以发动。将对手场上的攻击表示的怪兽全部放回持有者的手牌。
+    ①：对手怪兽攻击宣言时可以发动。将对手场上攻击表示的怪兽全部放回持有者的手牌。
 card_type: Trap
 property: Normal
 series:
