--- a/data/cards/09596126.yaml
+++ b/data/cards/09596126.yaml
@@ -33,7 +33,7 @@ text:
   zh-TW: |-
     此卡不可通常召喚。僅限將我方墓地的光屬性與暗屬性怪獸各1隻從遊戲中除外的場合可特殊召喚。1回合1次，可選擇場上以表側表示存在的1隻怪獸從遊戲中除外。此效果發動的回合，此卡不可攻擊。
   zh-CN: |-
-    此卡不能通常召唤。可在将自己墓地中光属性和暗属性怪兽各1只除外的情况下特殊召唤。①：1回合1次，可以场上1只表侧表示的怪兽为对象发动。将该表侧表示的怪兽除外。发动此效果的回合中，此卡不可攻击。
+    此卡不可通常召唤。可在将自己墓地中光属性与暗属性怪兽各1只除外的情况下特殊召唤。①：1回合1次，可以场上1只表侧表示的怪兽为对象发动。将该表侧表示的怪兽除外。发动此效果的回合中，此卡不可攻击。
 card_type: Monster
 monster_type_line: Spellcaster / Effect
 attribute: DARK
