--- a/data/cards/26202165.yaml
+++ b/data/cards/26202165.yaml
@@ -32,7 +32,7 @@ text:
     이 카드명의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 이 카드가 필드에서 묘지로 보내졌을 경우에 발동한다. 덱에서 공격력 1500 이하의 몬스터 1장을 패에 넣는다. 이 턴에 자신은 이 효과로 패에 넣은 카드 및 그와 같은 이름의 카드의 효과를 발동할 수 없다.
   zh-TW:
   zh-CN: |-
-    此卡名的效果1回合中仅可使用1次。①：此卡从场上被送至墓地的情况下发动。从牌组将1只攻击力1500以下的怪兽加入手牌。此回合，自己不可发动以此效果加入手牌的卡及该卡的同名卡的效果。
+    此卡名的效果1回合仅可使用1次。①：此卡从场上被送至墓地的情况下发动。从牌组将1只攻击力1500以下的怪兽加入手牌。此回合，自己不可发动以此效果加入手牌的卡及该卡的同名卡的效果。
 card_type: Monster
 monster_type_line: Fiend / Effect
 attribute: DARK
