--- a/data/cards/29649320.yaml
+++ b/data/cards/29649320.yaml
@@ -32,7 +32,7 @@ text:
     ①: 1턴에 1번, 자신 메인 페이즈에 패에서 몬스터 1장을 버리고 발동할 수 있다. 자신의 덱 / 묘지에서 "성스러운 방어막 거울의 힘" 1장을 고르고 패에 넣는다. ②: 세트된 이 카드가 상대 효과로 파괴되어 묘지로 보내졌을 경우에 발동할 수 있다. 묘지의 이 카드와 자신의 패 / 덱 / 묘지의 "성스러운 방어막 거울의 힘" 1장을 고르고, 그 카드와 이 카드를 자신 필드에 세트한다. 이 효과로 세트한 카드는 세트한 턴에도 발동할 수 있다.
   zh-TW:
   zh-CN: |-
-    ①：1回合1次，在自己主要阶段从手牌扔掉1只怪兽可以发动。从自己的牌组・墓地挑选1张“神圣防护罩 －反射镜力－”加入手牌。②：被放置的此卡被对手的效果破坏送至墓地的情况下可以发动。挑选墓地的此卡和自己手牌・牌组・墓地的1张“神圣防护罩 －反射镜力－”，将该卡和此卡放置在自己场上。以此效果放置的卡在放置的回合中也可以发动。
+    ①：1回合1次，在自己的主要阶段从手牌扔掉1只怪兽可以发动。从自己的牌组・墓地挑选1张"神圣防护罩－反射镜力－"加入手牌。②：被放置的此卡被对手的效果破坏送至墓地的情况下可以发动。挑选墓地的此卡和自己手牌・牌组・墓地的1张"神圣防护罩－反射镜力－"，将该卡和此卡放置在自己场上。以此效果放置的卡在放置的回合中也可以发动。
 card_type: Trap
 property: Continuous
 images:
