--- a/data/cards/41386308.yaml
+++ b/data/cards/41386308.yaml
@@ -32,7 +32,7 @@ text:
     ①: 이 카드가 일반 소환에 성공했을 때에 발동할 수 있다. 덱에서 레벨 4 이하의 몬스터 1장을 묘지로 보낸다. ②: 이 카드가 전투로 파괴되어 묘지로 보내졌을 때에 발동할 수 있다. 자신은 덱에서 1장 드로우한다.
   zh-TW:
   zh-CN: |-
-    ①：此卡召唤成功时可以发动。从牌组将1只等级4以下的怪兽送至墓地。②：此卡因战斗被破坏且送至墓地时可以发动。自己从牌组中抽1张。
+    ①：此卡召唤成功时可以发动。从牌组将1只等级4以下的怪兽送至墓地。②：此卡因战斗被破坏且送至墓地时可以发动。自己从牌组抽1张。
 card_type: Monster
 monster_type_line: Spellcaster / Effect
 attribute: EARTH
