--- a/data/cards/61391302.yaml
+++ b/data/cards/61391302.yaml
@@ -32,7 +32,7 @@ text:
     이 카드는 레벨 5 이상의 몬스터 1장을 릴리스하고 어드밴스 소환할 수 있다. 이 카드명의 ②의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 이 카드가 어드밴스 소환에 성공했을 경우에 발동할 수 있다. 상대 필드의 몬스터 1장을 골라 파괴하고, 그 몬스터의 원래 공격력만큼의 데미지를 상대에게 준다. ②: 이 카드가 전투로 몬스터를 파괴했을 때에 발동할 수 있다. 자신의 패 / 묘지에서 "오드아이즈 어드밴스 드래곤" 이외의 레벨 5 이상의 몬스터 1장을 골라 수비 표시로 특수 소환한다.
   zh-TW:
   zh-CN: |-
-    此卡可将1只等级5以上的怪兽解放以进行上级召唤。此卡名的②的效果1回合仅可使用1次。①：此卡上级召唤成功的情况下可进行发动。挑选对手场上的1只怪兽破坏，给予对手该怪兽的原本攻击力数值的伤害。②：此卡以战斗破坏怪兽时可以发动。从自己的手牌・墓地挑选1只“异色眼上级龙”以外的等级5以上的怪兽以守备表示特殊召唤。
+    此卡可将1只等级5以上的怪兽解放以进行上级召唤。此卡名的②效果1回合仅可使用1次。①：此卡上级召唤成功的情况下可以发动。挑选对手场上的1只怪兽破坏，给予对手该怪兽的原本攻击力数值的伤害。②：此卡以战斗破坏怪兽时可以发动。从自己的手牌・墓地挑选1只"异色眼上级龙"以外的等级5以上的怪兽以守备表示特殊召唤。
 card_type: Monster
 monster_type_line: Dragon / Effect
 attribute: DARK
