--- a/data/cards/69526976.yaml
+++ b/data/cards/69526976.yaml
@@ -32,7 +32,7 @@ text:
     ①: 이 카드는, 이 카드보다 높은 레벨을 가지는 몬스터 이외의 몬스터와의 전투로는 파괴되지 않는다. ②: 자신 스탠바이 페이즈에 발동할 수 있다. 이 카드의 레벨을 1개 올린다.
   zh-TW:
   zh-CN: |-
-    ①：此卡不会因与拥有比此卡更高等级的怪兽以外的怪兽战斗被破坏。②：自己的准备阶段可以发动。此卡的等级上升1。
+    ①：此卡不会因与拥有比此卡更高等级的怪兽以外的怪兽的战斗被破坏。②：自己的准备阶段可以发动。此卡的等级上升1。
 card_type: Monster
 monster_type_line: Fairy / Effect
 attribute: LIGHT
