--- a/data/cards/70368879.yaml
+++ b/data/cards/70368879.yaml
@@ -33,7 +33,7 @@ text:
   zh-TW: |-
     從我方牌組中抽取1張卡牌。之後，對手回復1000生命點數。
   zh-CN: |-
-    ①：自己从牌组中抽1张。之后，对手恢复1000LP。
+    ①：自己从牌组抽1张。然后，对手恢复1000LP。
 card_type: Spell
 property: Normal
 series:
