--- a/data/cards/72989439.yaml
+++ b/data/cards/72989439.yaml
@@ -44,7 +44,7 @@ text:
     이 카드는 통상 소환할 수 없다. 자신 묘지에서 빛 속성과 어둠 속성 몬스터를 1장씩 제외했을 경우에 특수 소환할 수 있다. 이 카드의 ①②의 효과는 1턴에 1번, 어느 쪽이든 1개밖에 사용할 수 없다. ①: 필드의 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터를 제외한다. 이 효과를 발동하는 턴에, 이 카드는 공격할 수 없다. ②: 이 카드의 공격으로 상대 몬스터를 파괴했을 때에 발동할 수 있다. 이 카드는 1번만 더 이어서 공격할 수 있다.
   zh-TW:
   zh-CN: |-
-    此卡不可通常召唤。可在将自己墓地中光属性与暗属性怪兽各1只除外的情况下特殊召唤。此卡的①②效果1回合1次，仅可使用其中1个。①：以场上的1只怪兽为对象可以发动。将该怪兽除外。发动此效果的回合中，此卡不可攻击。②：以此卡的攻击破坏对手怪兽时可以发动。此卡可继续再攻击仅1次。
+    此卡不可通常召唤。可在将自己墓地中光属性与暗属性怪兽各1只除外的情况下特殊召唤。此卡的①②效果1回合1次，只可使用其中1个。①：可以场上的1只怪兽为对象发动。将该怪兽除外。发动此效果的回合中，此卡不可攻击。②：以此卡的攻击破坏对手怪兽时可以发动。此卡可继续再攻击仅1次。
 card_type: Monster
 monster_type_line: Warrior / Effect
 attribute: LIGHT
