--- a/data/cards/74848038.yaml
+++ b/data/cards/74848038.yaml
@@ -33,7 +33,7 @@ text:
   zh-TW: |-
     捨棄1張手牌，可以選擇我方墓地的1隻怪獸進行發動。將選擇的怪獸加入手牌。
   zh-CN: |-
-    ①：扔掉1张手牌，可以自己墓地1只怪兽为对象发动。将该怪兽加入手牌。
+    ①：扔掉1张手牌，可以自己墓地的1只怪兽为对象发动。将该怪兽加入手牌。
 card_type: Spell
 property: Normal
 images:
