--- a/data/cards/77538567.yaml
+++ b/data/cards/77538567.yaml
@@ -33,7 +33,7 @@ text:
   zh-TW: |-
     对手的魔法、陷阱卡发动无效并破坏。对手可从牌组中抽取1张卡牌。
   zh-CN: |-
-    ①：对手发动魔法・陷阱卡时可以发动。使该发动无效并破坏。对手从牌组抽1张。
+    ①：对手发动魔法・陷阱卡时可以发动。将该发动无效并破坏。对手从牌组抽1张。
 card_type: Trap
 property: Counter
 images:
