--- a/data/cards/83555666.yaml
+++ b/data/cards/83555666.yaml
@@ -32,7 +32,7 @@ text:
     이 카드명의 카드는 1턴에 1장밖에 발동할 수 없다. ①: 상대 턴에, 상대 LP의 수치 이하의 공격력을 가지는 상대 필드의 앞면 표시 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 앞면 표시 몬스터를 파괴하고, 자신은 그 몬스터의 원래 공격력만큼의 데미지를 받는다. 그 후, 자신이 받은 데미지와 같은 수치만큼의 데미지를 상대에게 준다.
   zh-TW:
   zh-CN: |-
-    此卡名的卡1个回合仅可发动1张。①：在对手回合中，可以对手场上的1只表侧表示的，拥有对手LP数值以下的攻击力的怪兽为对象发动。破坏该表侧表示怪兽，自己受到相当于该怪兽原本攻击力数值的伤害。然后，给对手与自己所受伤害相同数值的伤害。
+    此卡名的卡1回合仅可发动1张。①：在对手回合中，可以对手场上的1只表侧表示的、拥有对手LP数值以下攻击力的怪兽为对象发动。破坏该表侧表示怪兽，自己受到相当于该怪兽原本攻击力数值的伤害。然后，给对手与自己所受伤害相同数值的伤害。
 card_type: Trap
 property: Normal
 images:
