--- a/data/cards/85087012.yaml
+++ b/data/cards/85087012.yaml
@@ -32,7 +32,7 @@ text:
     ①: 1턴에 1번, 자신의 덱 위에서 카드를 3장까지 묘지로 보내고 발동할 수 있다. 이 카드의 공격력은 턴 종료시까지, 이 효과를 발동하기 위해 묘지로 보낸 카드의 수 × 500 올린다. ②: 자신 필드의 이 카드가 파괴되어 묘지로 보내졌을 경우에 발동한다. 자신은 덱에서 1장 드로우한다.
   zh-TW:
   zh-CN: |-
-    ①：1回合1次，自己从牌组上面把最多3张卡送至墓地可以发动。直至回合结束时为止，此卡的攻击力上升为发动此效果送至墓地的卡的数量×500的数值。②：自己场上的此卡被破坏送至墓地的情况下发动。自己从牌组抽1张。
+    ①：1回合1次，自己从牌组上面将最多3张卡送至墓地可以发动。直至回合结束时为止，此卡的攻击力上升为发动此效果送至墓地的卡数量×500的数值。②：自己场上的此卡被破坏送至墓地的情况下发动。自己从牌组抽1张。
 card_type: Monster
 monster_type_line: Machine / Effect
 attribute: EARTH
