--- a/data/cards/kdb18228.yaml
+++ b/data/cards/kdb18228.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 18228
 password:
 name:
   en: Brave Beauty of Ruby Regard - Bradamante
@@ -22,7 +22,8 @@ text:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカード名はルール上「焔聖騎士」カードとしても扱う。このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：このカードを手札から捨て、自分フィールドの戦士族モンスター１体を対象として発動できる。そのモンスターが装備可能な装備魔法カード１枚をデッキから選び、そのモンスターに装備する。②：装備カードを装備していないこのカードが相手モンスターとの戦闘で破壊され墓地へ送られた時に発動できる。このカードを特殊召喚し、その相手フィールドのモンスターを装備カード扱いとしてこのカードに装備する。
   ko:
   zh-TW:
   zh-CN:
@@ -46,5 +47,5 @@ sets:
     - Ultra Rare
 limit_regulation:
   tcg: Not yet released
-  ocg: Not yet released
+  ocg: Unlimited
 yugipedia_page_id: 906310
