--- a/data/rush/18574.yaml
+++ b/data/rush/18574.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 18574
 name:
   en: Hacking Dragon
   de:
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    なし
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分の手札のモンスター（ドラゴン族）１体を相手フィールドに表側守備表示で特殊召喚する。その後、相手フィールドの攻撃表示モンスター（レベル８以下）１体を選んで持ち主の手札に戻す事ができる。
   ko:
   zh-TW:
   zh-CN:
