--- a/data/rush/18446.yaml
+++ b/data/rush/18446.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 18446
 name:
   en: Star Tri-Leo
   de:
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカードを召喚したターンに、自分フィールドにこのカード以外のモンスターがいない場合に発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分のデッキの上からカードを３枚めくり、お互いに確認する。自分はめくったカードの中からモンスター（ギャラクシー族）を全て墓地へ送る。残りのカードを好きな順番でデッキの下に戻す。
   ko:
   zh-TW:
   zh-CN:
