--- a/data/cards/19048328.yaml
+++ b/data/cards/19048328.yaml
@@ -8,7 +8,7 @@ name:
   it: Chaofeng, Fantasma dello Yang Zing
   pt: Chaofeng, o Fantasma de Yang Zing
   ja: <ruby>幻<rt>げん</rt></ruby><ruby>竜<rt>りゅう</rt></ruby><ruby>星<rt>せい</rt></ruby>－チョウホウ
-  ja_romaji: Genryūsei - Chōhō
+  ja_romaji: Genryūsei - Chouhou
   ko: 환룡성-쵸호우
   ko_rr:
   zh-TW:
