--- a/data/cards/56094445.yaml
+++ b/data/cards/56094445.yaml
@@ -44,10 +44,10 @@ series:
 images:
 - index: 1
   image: '  AncientGearSoldier-SR03-JP-C.png'
-  illustration: '   AncientGearSoldier-TF04-JP-VG.jpg'
+  illustration: '   AncientGearSoldier-TF05-JP-VG-artwork.png'
 - index: '1.1'
   image: AncientGearSoldier-SGX1-EN-C-1E.png
-  illustration: AncientGearSoldier-TF04-EN-VG.jpg
+  illustration: AncientGearSoldier-TF04-EN-VG-artwork.png
 sets:
   en:
   - set_number: TLM-EN008
