--- a/data/cards/81846453.yaml
+++ b/data/cards/81846453.yaml
@@ -9,7 +9,7 @@ name:
   pt: Marchador Marcial de Metal
   ja: <ruby>武力<rt>ブリキ</rt></ruby>の<ruby>軍<rt>ぐん</rt></ruby><ruby>奏<rt>そう</rt></ruby>
   ja_romaji: Buriki no Gunsō
-  ko: 양절의 군주
+  ko: 양철의 군주
   ko_rr:
   zh-TW:
   zh-CN: 武力军奏
