--- a/data/cards/21908319.yaml
+++ b/data/cards/21908319.yaml
@@ -38,10 +38,10 @@ property: Normal
 images:
 - index: 1
   image: '  KozakysSelfDestructButton-EE3-JP-R.jpg'
-  illustration: '   KozakysSelfDestructButton-TF04-JP-VG.jpg'
+  illustration: '   KozakysSelfDestructButton-TF05-JP-VG-artwork.png'
 - index: '1.1'
   image: KozakysSelfDestructButton-DR3-EN-R-UE.jpg
-  illustration: KozakysSelfDestructButton-TF04-EN-VG.jpg
+  illustration: KozakysSelfDestructButton-TF04-EN-VG-artwork.png
 sets:
   en:
   - set_number: TLM-EN052
