--- a/data/cards/58392024.yaml
+++ b/data/cards/58392024.yaml
@@ -40,10 +40,10 @@ series:
 images:
 - index: 1
   image: '  Mispolymerization-EE3-JP-C.jpg'
-  illustration: '   Mispolymerization-TF04-JP-VG.png'
+  illustration: '   Mispolymerization-TF05-JP-VG-artwork.png'
 - index: '1.1'
   image: Mispolymerization-DR3-EN-C-UE.png
-  illustration: Mispolymerization-TF04-EN-VG.jpg
+  illustration: Mispolymerization-TF04-EN-VG-artwork.png
 sets:
   en:
   - set_number: TLM-EN053
