--- a/rush.yaml
+++ b/rush.yaml
@@ -87908,3 +87908,160 @@ sets:
     rarities:
     - Super Rare
 yugipedia_page_id: 928572
+---
+konami_id:
+name:
+  en: Transamu Lightning
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: トランザム・ライトニング
+  ja_romaji: Toranzamu Raitoningu
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    When an opponent's monster declares an attack targeting your face-up Level 4 or lower Galaxy Type Normal Monster.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    The attack target cannot be destroyed by battle this turn.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Trap
+property: Normal
+series:
+- Transamu
+images:
+- index: 1
+  image: TransamuLightning-RDKP12-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP12-JP056
+    set_name: 'Deck Mod Pack: Double Star of the Assault!!'
+    rarities:
+    - Common
+yugipedia_page_id: 928695
+---
+konami_id:
+name:
+  en: Jointech Great Wall
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: ジョインテック・グレートウォール
+  ja_romaji: Jointekku Gurēto Wōru
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    When your opponent Normal or Special Summons a Level 7 or higher monster face-up while you have a face-up Level 7 or higher EARTH Attribute Machine Type monster on your field.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    This turn, up to 3 face-up EARTH Attribute Machine Type monsters on your field gain 300 ATK and cannot be destroyed by battle.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Trap
+property: Normal
+series:
+- Jointech
+images:
+- index: 1
+  image: JointechGreatWall-RDKP12-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP12-JP057
+    set_name: 'Deck Mod Pack: Double Star of the Assault!!'
+    rarities:
+    - Common
+yugipedia_page_id: 928697
+---
+konami_id:
+name:
+  en: Tribute Block
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: アドバンス・ブロック
+  ja_romaji: Adobansu Burokku
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    When your opponent Normal Summons a Level 5 or higher monster.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Change that Normal Summoned monster and 1 Attack Position Dragon or Machine Type monster on your field to face-up Defense Position.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Trap
+property: Normal
+images:
+- index: 1
+  image: TributeBlock-RDKP12-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP12-JP058
+    set_name: 'Deck Mod Pack: Double Star of the Assault!!'
+    rarities:
+    - Rare
+yugipedia_page_id: 928699
