--- a/data/cards/76812113.yaml
+++ b/data/cards/76812113.yaml
@@ -44,10 +44,10 @@ series:
 images:
 - index: 1
   image: '  HarpieLady-MRD-EU-C-UE.jpg'
-  illustration: ' HarpieLady-TF04-JP-VG.png'
+  illustration: ' HarpieLady-TF05-JP-VG-artwork.png'
 - index: '1.1'
   image: HarpieLady-DPBC-EN-C-1E.png
-  illustration: HarpieLady-TF04-EN-VG.png
+  illustration: HarpieLady-TF04-EN-VG-artwork.png
 sets:
   en:
   - set_number: DB1-EN145
