--- a/data/cards/25119460.yaml
+++ b/data/cards/25119460.yaml
@@ -54,10 +54,10 @@ series:
 images:
 - index: 1
   image: '  YZTankDragon-DP17-JP-R.png'
-  illustration: '   YZTankDragon-TF04-JP-VG.png'
+  illustration: '   YZTankDragon-TF05-JP-VG-artwork.png'
 - index: '1.1'
   image: YZTankDragon-SBCB-EN-C-1E.png
-  illustration: YZTankDragon-TF04-EN-VG.png
+  illustration: YZTankDragon-TF04-EN-VG-artwork.png
 sets:
   en:
   - set_number: DR1-EN109
