--- a/data/cards/60246171.yaml
+++ b/data/cards/60246171.yaml
@@ -44,10 +44,10 @@ series:
 images:
 - index: 1
   image: '  Soitsu-EE04-JP-C.jpg'
-  illustration: '   Soitsu-TF04-JP-VG.jpg'
+  illustration: '   Soitsu-TF05-JP-VG-artwork.png'
 - index: '1.1'
   image: Soitsu-DR04-NA-C-UE.png
-  illustration: Soitsu-TF04-EN-VG.png
+  illustration: Soitsu-TF04-EN-VG-artwork.png
 sets:
   en:
   - set_number: CRV-EN002
