--- a/data/cards/97362768.yaml
+++ b/data/cards/97362768.yaml
@@ -38,10 +38,10 @@ property: Equip
 images:
 - index: 1
   image: '  SparkBlaster-EE04-JP-C.jpg'
-  illustration: '   SparkBlaster-TF04-JP-VG.jpg'
+  illustration: '   SparkBlaster-TF05-JP-VG-artwork.png'
 - index: '1.1'
   image: SparkBlaster-LCGX-EN-C-1E.png
-  illustration: SparkBlaster-TF04-EN-VG.jpg
+  illustration: SparkBlaster-TF04-EN-VG-artwork.png
 sets:
   en:
   - set_number: CRV-EN047
