--- a/data/cards/58185394.yaml
+++ b/data/cards/58185394.yaml
@@ -42,10 +42,10 @@ def: 2400
 images:
 - index: 1
   image: '  GiantKozaky-EE04-JP-C.jpg'
-  illustration: '   GiantKozaky-TF04-JP-VG.jpg'
+  illustration: '   GiantKozaky-TF05-JP-VG-artwork.png'
 - index: '1.1'
   image: GiantKozaky-DR04-NA-C-UE.png
-  illustration: GiantKozaky-TF04-EN-VG.jpg
+  illustration: GiantKozaky-TF04-EN-VG-artwork.png
 sets:
   en:
   - set_number: CRV-EN022
