--- a/data/cards/79571449.yaml
+++ b/data/cards/79571449.yaml
@@ -38,10 +38,10 @@ property: Normal
 images:
 - index: 1
   image: '  GracefulCharity-BE02-JP-R.jpg'
-  illustration: '   GracefulCharity-TF04-JP-VG.jpg'
+  illustration: '   GracefulCharity-TF05-JP-VG-artwork.png'
 - index: '1.1'
   image: GracefulCharity-BP02-EN-R-1E.png
-  illustration: GracefulCharity-TF04-EN-VG.jpg
+  illustration: GracefulCharity-TF04-EN-VG-artwork.png
 sets:
   en:
   - set_number: DB2-EN095
