--- a/data/rush/16328.yaml
+++ b/data/rush/16328.yaml
@@ -1,6 +1,6 @@
 konami_id: 16328
 name:
-  en: Tranquil Unknown Soldier
+  en: Wondering Warrior
   de:
   es:
   fr:
@@ -48,7 +48,7 @@ atk: 1800
 def: 0
 images:
 - index: 1
-  image: TranquilUnknownSoldier-RDSBD3-JP-C.png
+  image: WonderingWarrior-RDSBD3-JP-C.png
 sets:
   ja:
   - set_number: RD/KP05-JP021
