--- a/data/rush/16921.yaml
+++ b/data/rush/16921.yaml
@@ -48,7 +48,7 @@ atk: 2800
 def: 2200
 materials:
   en: |-
-    "Super King Rex" + "Upstart King Rex"
+    "Super King Rex" + "Ritzy King Rex"
   de:
   es:
   fr:
