--- a/data/rush/16569.yaml
+++ b/data/rush/16569.yaml
@@ -1,6 +1,6 @@
 konami_id: 16569
 name:
-  en: Supreme Flagship Magnum Overlord [L]
+  en: Supreme Skystream Magnum Overlord [L]
   de:
   es:
   fr:
@@ -50,7 +50,7 @@ series:
 - Supreme Magnum Overlord
 images:
 - index: 1
-  image: SupremeFlagshipMagnumOverlordL-RDMAX2-JP-UR.png
+  image: SupremeSkystreamMagnumOverlordL-RDMAX2-JP-UR.png
 sets:
   ja:
   - set_number: RD/MAX2-JP001
