--- a/data/rush/16578.yaml
+++ b/data/rush/16578.yaml
@@ -1,6 +1,6 @@
 konami_id: 16578
 name:
-  en: Upstart King Rex
+  en: Ritzy King Rex
   de:
   es:
   fr:
@@ -50,7 +50,7 @@ series:
 - Nouveau Riche Dinosaur
 images:
 - index: 1
-  image: UpstartKingRex-RDMAX2-JP-R.png
+  image: RitzyKingRex-RDMAX2-JP-R.png
 sets:
   ja:
   - set_number: RD/MAX2-JP010
