--- a/data/rush/16785.yaml
+++ b/data/rush/16785.yaml
@@ -1,6 +1,6 @@
 konami_id: 16785
 name:
-  en: Dreamrummer
+  en: Dream Drummer
   de:
   es:
   fr:
@@ -50,7 +50,7 @@ series:
 - Band Group
 images:
 - index: 1
-  image: Dreamrummer-RDMRP1-JP-C.png
+  image: DreamDrummer-RDMRP1-JP-C.png
 sets:
   ja:
   - set_number: RD/SBD4-JP012
