--- a/data/rush/16795.yaml
+++ b/data/rush/16795.yaml
@@ -1,6 +1,6 @@
 konami_id: 16795
 name:
-  en: Constructor Brawler Mixah
+  en: Constructor Fighter Mixer
   de:
   es:
   fr:
@@ -50,7 +50,7 @@ series:
 - Constructor
 images:
 - index: 1
-  image: ConstructorBrawlerMixah-RDSBD7-JP-C.png
+  image: ConstructorFighterMixer-RDSBD7-JP-C.png
 sets:
   ja:
   - set_number: RD/SBD7-JP010
