--- a/rush.yaml
+++ b/rush.yaml
@@ -29067,7 +29067,7 @@ yugipedia_page_id: 802697
 ---
 konami_id: 16328
 name:
-  en: Tranquil Unknown Soldier
+  en: Wondering Warrior
   de:
   es:
   fr:
@@ -29115,7 +29115,7 @@ atk: 1800
 def: 0
 images:
 - index: 1
-  image: TranquilUnknownSoldier-RDSBD3-JP-C.png
+  image: WonderingWarrior-RDSBD3-JP-C.png
 sets:
   ja:
   - set_number: RD/KP05-JP021
@@ -32250,7 +32250,7 @@ yugipedia_page_id: 802739
 ---
 konami_id: 16569
 name:
-  en: Supreme Flagship Magnum Overlord [L]
+  en: Supreme Skystream Magnum Overlord [L]
   de:
   es:
   fr:
@@ -32300,7 +32300,7 @@ series:
 - Supreme Magnum Overlord
 images:
 - index: 1
-  image: SupremeFlagshipMagnumOverlordL-RDMAX2-JP-UR.png
+  image: SupremeSkystreamMagnumOverlordL-RDMAX2-JP-UR.png
 sets:
   ja:
   - set_number: RD/MAX2-JP001
@@ -32326,7 +32326,7 @@ yugipedia_page_id: 808227
 ---
 konami_id: 16570
 name:
-  en: Supreme Flagship Magnum Overlord
+  en: Supreme Skystream Magnum Overlord
   de:
   es:
   fr:
@@ -32340,7 +32340,7 @@ name:
   zh-CN:
 summoning_condition:
   en: |-
-    You can Maximum Summon this card together with "Supreme Flagship Magnum Overlord [L]" and "Supreme Flagship Magnum Overlord [R]".
+    You can Maximum Summon this card together with "Supreme Skystream Magnum Overlord [L]" and "Supreme Skystream Magnum Overlord [R]".
   de:
   es:
   fr:
@@ -32394,7 +32394,7 @@ series:
 maximum_atk: 3500
 images:
 - index: 1
-  image: SupremeFlagshipMagnumOverlord-RDMAX2-JP-UR.png
+  image: SupremeSkystreamMagnumOverlord-RDMAX2-JP-UR.png
 sets:
   ja:
   - set_number: RD/MAX2-JP002
@@ -32420,7 +32420,7 @@ yugipedia_page_id: 808226
 ---
 konami_id: 16571
 name:
-  en: Supreme Flagship Magnum Overlord [R]
+  en: Supreme Skystream Magnum Overlord [R]
   de:
   es:
   fr:
@@ -32470,7 +32470,7 @@ series:
 - Supreme Magnum Overlord
 images:
 - index: 1
-  image: SupremeFlagshipMagnumOverlordR-RDMAX2-JP-UR.png
+  image: SupremeSkystreamMagnumOverlordR-RDMAX2-JP-UR.png
 sets:
   ja:
   - set_number: RD/MAX2-JP003
@@ -32916,7 +32916,7 @@ yugipedia_page_id: 808255
 ---
 konami_id: 16578
 name:
-  en: Upstart King Rex
+  en: Ritzy King Rex
   de:
   es:
   fr:
@@ -32966,7 +32966,7 @@ series:
 - Nouveau Riche Dinosaur
 images:
 - index: 1
-  image: UpstartKingRex-RDMAX2-JP-R.png
+  image: RitzyKingRex-RDMAX2-JP-R.png
 sets:
   ja:
   - set_number: RD/MAX2-JP010
@@ -41119,7 +41119,7 @@ yugipedia_page_id: 822607
 ---
 konami_id: 16785
 name:
-  en: Dreamrummer
+  en: Dream Drummer
   de:
   es:
   fr:
@@ -41169,7 +41169,7 @@ series:
 - Band Group
 images:
 - index: 1
-  image: Dreamrummer-RDMRP1-JP-C.png
+  image: DreamDrummer-RDMRP1-JP-C.png
 sets:
   ja:
   - set_number: RD/SBD4-JP012
@@ -41745,7 +41745,7 @@ yugipedia_page_id: 816693
 ---
 konami_id: 16795
 name:
-  en: Constructor Brawler Mixah
+  en: Constructor Fighter Mixer
   de:
   es:
   fr:
@@ -41795,7 +41795,7 @@ series:
 - Constructor
 images:
 - index: 1
-  image: ConstructorBrawlerMixah-RDSBD7-JP-C.png
+  image: ConstructorFighterMixer-RDSBD7-JP-C.png
 sets:
   ja:
   - set_number: RD/SBD7-JP010
@@ -44739,7 +44739,7 @@ atk: 2800
 def: 2200
 materials:
   en: |-
-    "Super King Rex" + "Upstart King Rex"
+    "Super King Rex" + "Ritzy King Rex"
   de:
   es:
   fr:
