--- a/data/rush/17535.yaml
+++ b/data/rush/17535.yaml
@@ -1,6 +1,6 @@
 konami_id: 17535
 name:
-  en: Forest of the Sun
+  en: Sunny Forest
   de:
   es:
   fr:
@@ -44,7 +44,7 @@ card_type: Spell
 property: Field
 images:
 - index: 1
-  image: ForestoftheSun-RDKP09-JP-C.png
+  image: SunnyForest-RDKP09-JP-C.png
 sets:
   ja:
   - set_number: RD/KP09-JP049
