--- a/data/rush/17549.yaml
+++ b/data/rush/17549.yaml
@@ -1,6 +1,6 @@
 konami_id: 17549
 name:
-  en: Tumbling Insects
+  en: Ignoring Insect
   de:
   es:
   fr:
@@ -44,7 +44,7 @@ card_type: Trap
 property: Normal
 images:
 - index: 1
-  image: TumblingInsects-RDKP09-JP-C.png
+  image: IgnoringInsect-RDKP09-JP-C.png
 sets:
   ja:
   - set_number: RD/KP09-JP063
