--- a/data/cards/43434803.yaml
+++ b/data/cards/43434803.yaml
@@ -38,10 +38,10 @@ property: Normal
 images:
 - index: 1
   image: '  TheShallowGrave-DS13-JP-C.png'
-  illustration: '   TheShallowGrave-TF04-JP-VG.jpg'
+  illustration: '   TheShallowGrave-TF05-JP-VG-artwork.png'
 - index: '1.1'
   image: TheShallowGrave-SBLS-EN-C-1E.png
-  illustration: TheShallowGrave-TF04-EN-VG.jpg
+  illustration: TheShallowGrave-TF04-EN-VG-artwork.png
 sets:
   en:
   - set_number: DB1-EN090
