--- a/data/cards/yugipedia921008.yaml
+++ b/data/cards/yugipedia921008.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    Effects unknown.
+    If this card is Normal or Special Summoned: You can add 1 face-up Machine Pendulum Monster from your Extra Deck to your hand. If you have no Spells/Traps in your GY: You can Tribute this card; Special Summon 1 EARTH Machine monster with 1500 or less ATK from your hand or GY, except "Superheavy Samurai Constable". You can only use each effect of "Superheavy Samurai Constable" once per turn.
   de:
   es:
   fr:
