--- a/data/rush/16909.yaml
+++ b/data/rush/16909.yaml
@@ -1,6 +1,6 @@
 konami_id: 16909
 name:
-  en: The☆Wyvern
+  en: The Wyvern
   de:
   es:
   fr:
@@ -47,7 +47,7 @@ level: 5
 atk: 500
 def: 1500
 series:
-- The☆
+- The
 images:
 - index: 1
   image: TheWyvern-RDEXT1-JP-SR.png
