--- a/data/rush/16951.yaml
+++ b/data/rush/16951.yaml
@@ -1,6 +1,6 @@
 konami_id: 16951
 name:
-  en: The☆Star Dragon
+  en: The Star Dragon
   de:
   es:
   fr:
@@ -47,7 +47,7 @@ level: 7
 atk: 2500
 def: 1500
 series:
-- The☆
+- The
 images:
 - index: 1
   image: TheStarDragon-RDSJMP-JP-NPR.png
