--- a/data/rush/17668.yaml
+++ b/data/rush/17668.yaml
@@ -51,7 +51,7 @@ atk: 3000
 def: 2000
 materials:
   en: |-
-    "Steel Strike Dragon Metagias" + "The☆Dragon"
+    "Steel Strike Dragon Metagias" + "The Dragon"
   de:
   es:
   fr:
