--- a/data/rush/yugipedia923450.yaml
+++ b/data/rush/yugipedia923450.yaml
@@ -1,6 +1,6 @@
 konami_id:
 name:
-  en: Back To The☆Fusion
+  en: Back To The Fusion
   de:
   es:
   fr:
@@ -39,7 +39,7 @@ effect:
 card_type: Spell
 property: Normal
 series:
-- The☆
+- The
 images:
 - index: 1
   image: BackToTheFusion-RDKP12-JP-OP.png
