--- a/data/rush/16906.yaml
+++ b/data/rush/16906.yaml
@@ -1,6 +1,6 @@
 konami_id: 16906
 name:
-  en: Superstrike Dragon Dragiastar F
+  en: Hyperstrike Dragon Dragiastar F
   de:
   es:
   fr:
@@ -51,7 +51,7 @@ atk: 3000
 def: 2000
 materials:
   en: |-
-    "Multistrike Dragon Dragias" + "The☆Dragon"
+    "Multistrike Dragon Dragias" + "The Dragon"
   de:
   es:
   fr:
@@ -67,7 +67,7 @@ series:
 - Strike Dragon
 images:
 - index: 1
-  image: SuperstrikeDragonDragiastarF-RDEXT1-JP-UR.png
+  image: HyperstrikeDragonDragiastarF-RDEXT1-JP-UR.png
 sets:
   ja:
   - set_number: RD/EXT1-JP022
