--- a/data/rush/16907.yaml
+++ b/data/rush/16907.yaml
@@ -1,6 +1,6 @@
 konami_id: 16907
 name:
-  en: Full Moon Dragon Umbrlancer F
+  en: Full Moon Dragon Umbralancer F
   de:
   es:
   fr:
@@ -65,7 +65,7 @@ materials:
   zh-CN:
 images:
 - index: 1
-  image: FullMoonDragonUmbrlancerF-RDEXT1-JP-SR.png
+  image: FullMoonDragonUmbralancerF-RDEXT1-JP-SR.png
 sets:
   ja:
   - set_number: RD/EXT1-JP023
