--- a/data/rush/16910.yaml
+++ b/data/rush/16910.yaml
@@ -1,6 +1,6 @@
 konami_id: 16910
 name:
-  en: The☆Dragon
+  en: The Dragon
   de:
   es:
   fr:
@@ -33,7 +33,7 @@ level: 1
 atk: 0
 def: 0
 series:
-- The☆
+- The
 images:
 - index: 1
   image: TheDragon-RDGRC1-JP-SR.png
