--- a/data/rush/16911.yaml
+++ b/data/rush/16911.yaml
@@ -1,6 +1,6 @@
 konami_id: 16911
 name:
-  en: The☆Power-Up
+  en: The Power Up
   de:
   es:
   fr:
@@ -43,7 +43,7 @@ effect:
 card_type: Spell
 property: Normal
 series:
-- The☆
+- The
 images:
 - index: 1
   image: ThePowerUp-RDEXT1-JP-C.png
