--- a/data/rush/16912.yaml
+++ b/data/rush/16912.yaml
@@ -1,6 +1,6 @@
 konami_id: 16912
 name:
-  en: The☆Barrier
+  en: The Barrier
   de:
   es:
   fr:
@@ -43,7 +43,7 @@ effect:
 card_type: Trap
 property: Normal
 series:
-- The☆
+- The
 images:
 - index: 1
   image: TheBarrier-RDEXT1-JP-C.png
